--- a/src/pages/en/projects/air/luthiers.astro
+++ b/src/pages/en/projects/air/luthiers.astro
@@ -8,20 +8,20 @@ import luthiers1 from '../../../../img/projects/luthiers/luthiers1.webp';
 import luthiers2 from '../../../../img/projects/luthiers/luthiers2.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenarios y Producciones al Aire libre' },
+    { label: 'Typology', value: 'Outdoor Stages and Productions' },
     {
-        label: 'Ubicación',
-        value: 'Predio del Monumento a Güemes, Ciudad Autónoma de Buenos Aires, Argentina',
+        label: 'Location',
+        value: 'Güemes Monument Grounds, Autonomous City of Buenos Aires, Argentina',
     },
-    { label: 'Producción general', value: 'Lino Patalano' },
-    { label: 'Artistas', value: 'Les Luthiers' },
-    { label: 'Servicios', value: 'Proyecto ejecutivo y Dirección técnica de producción' },
-    { label: 'Comitente', value: 'Lino Patalano' },
+    { label: 'General Production', value: 'Lino Patalano' },
+    { label: 'Artists', value: 'Les Luthiers' },
+    { label: 'Services', value: 'Executive Project and Technical Production Direction' },
+    { label: 'Client', value: 'Lino Patalano' },
     {
-        label: 'Proyecto escenotécnico',
-        value: 'Tina Di Sarcina, Sandro Massironi, Arq. Alfio Sambataro',
+        label: 'Scenotechnical Project',
+        value: 'Tina Di Sarcina, Sandro Massironi, Arch. Alfio Sambataro',
     },
-    { label: 'Año', value: '2007' },
+    { label: 'Year', value: '2007' },
 ];
 
 const asesores = ['-'];
@@ -42,7 +42,7 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Les Luthiers 40 años">
+<Layout description="" title="Les Luthiers 40 years">
     <Base>
         <ProjectPage
             images={images}
@@ -50,9 +50,9 @@ const images = [
             city="Buenos Aires, Argentina"
             year="2007"
             room="Aniversario nr 40, Parque Monumento a Güemes"
-            project="Les Luthiers 40 años"
-            description1="Con motivo de sus 40 años de trayectoria artística, el grupo de instrumentos informales Les Luthiers realizó un espectáculo frente a más de 60.000 personas en el predio del Monumento a Güemes, en un espectáculo público y gratuito."
-            description2="En el proyecto de la producción al aire libre se realizaron el diseño y la dirección técnica de la producción, tanto de los sistemas constructivos escénicos como de los sistemas de iluminación, sonido y video."
+            project="Les Luthiers 40 years"
+            description1="On the occasion of its 40 years of artistic career, the group of informal instruments Les Luthiers made a show in front of more than 60,000 people in the park of the Monument to Güemes, in a public and free show."
+            description2="In the open air production project, the design and technical direction of the production were carried out, in the staging constructive systems, as in lighting, sound and video systems."
             img={luthiers}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
