--- a/src/pages/en/projects/air/orquesta.astro
+++ b/src/pages/en/projects/air/orquesta.astro
@@ -24,23 +24,23 @@ import orquesta17 from '../../../../img/projects/orquesta/orquesta17.webp';
 import orquesta18 from '../../../../img/projects/orquesta/orquesta18.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenarios y Producciones al Aire libre' },
-    { label: 'Ubicación', value: 'Parque San Martín, Mar del Plata, Buenos Aires, Argentina' },
+    { label: 'Typology', value: 'Outdoor Stages and Productions' },
+    { label: 'Location', value: 'Parque San Martín, Mar del Plata, Buenos Aires, Argentina' },
     {
-        label: 'Producción general',
-        value: 'Teatro Colón, Ministerio de Gestión Cultural de la Provincia de Buenos Aires, Wam Entertainment Company',
+        label: 'General Production',
+        value: 'Teatro Colón, Ministry of Cultural Management of the Province of Buenos Aires, Wam Entertainment Company',
     },
-    { label: 'Artistas', value: 'Orquesta Filarmónica de Buenos Aires' },
+    { label: 'Artists', value: 'Buenos Aires Philharmonic Orchestra' },
     {
-        label: 'Servicios',
-        value: 'Asesoramiento escenotécnico, Proyecto ejecutivo y Dirección técnica de producción',
+        label: 'Services',
+        value: 'Scenic-Technical Consulting, Executive Project and Technical Production Management',
     },
-    { label: 'Dirección ejecutiva', value: 'Enrique Bordolini' },
+    { label: 'Executive Direction', value: 'Enrique Bordolini' },
     {
-        label: 'Asesoramiento escenotécnico',
-        value: 'Arq. Alfio Sambataro, Arq. Agostina Sambataro',
+        label: 'Scenic-Technical Consulting',
+        value: 'Arch. Alfio Sambataro, Arch. Agostina Sambataro',
     },
-    { label: 'Año', value: '2018' },
+    { label: 'Year', value: '2018' },
 ];
 
 const asesores = ['-'];
@@ -157,7 +157,7 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Orquesta Filarmónica de Buenos Aires">
+<Layout description="" title="Philarmónic Orchestra of Buenos Aires">
     <Base>
         <ProjectPage
             images={images}
@@ -165,9 +165,9 @@ const images = [
             city="Mar del Plata, Argentina"
             year="2018"
             room="Concierto Parque San Martín"
-            project="Orquesta Filarmónica de Buenos Aires"
-            description1="Como parte de la programación de la quinta temporada de Espacio Clarín, los gobiernos bonaerense y municipal participaron de la convocatoria en el parque San Martín en Playa Grande, Mar del Plata. En un escenario montado frente al mar, el grupo de ochenta músicos de la Orquesta Filarmónica del Teatro Colón dirigida por el maestro Enrique Arturo Diemecke realizó un espectáculo frente a más de 40.000 personas, en un concierto público y gratuito, interpretando obras de Ludwig Van Beethoven y Leonard Bernstein así como también tangos tradicionales."
-            description2="En el proyecto de la producción al aire libre se realizaron dentro del marco del asesoramiento escenotécnico, el diseño y la dirección técnica de la producción, tanto de los sistemas constructivos escénicos como de los sistemas de iluminación, sonido y video."
+            project="Philarmónic Orchestra of Buenos Aires"
+            description1="As part of the programming of the fifth season of Espacio Clarín, the Buenos Aires and municipal governments participated in the show at the San Martín Park in Playa Grande, Mar del Plata. In a stage set facing the sea, the group of eighty musicians of the Philharmonic Orchestra of the Teatro Colón directed by the maestro Enrique Arturo Diemecke made a show in front of more than 40,000 people, in a free public concert, performing works by Ludwig Van Beethoven and Leonard Bernstein as well as traditional tangos."
+            description2="In the open air production project, the design and technical direction of the production were carried out, in the staging constructive systems, as in lighting, sound and video systems."
             img={orquesta}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
