--- a/src/pages/en/projects/buildings/ballet-santiago.astro
+++ b/src/pages/en/projects/buildings/ballet-santiago.astro
@@ -26,21 +26,27 @@ import ballet19 from '../../../../img/projects/ballet/ballet19.webp';
 import ballet20 from '../../../../img/projects/ballet/ballet20.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Edificio complementario' },
-    { label: 'Ubicación', value: 'Moneda 759, Santiago, Chile' },
-    { label: 'Temática', value: 'Refuncionalización' },
-    { label: 'Servicios', value: 'Proyecto ejecutivo general de arquitectura, Dirección de obra' },
-    { label: 'Comitente', value: 'Municipalidad de Santiago' },
-    { label: 'Proyecto general de arquitectura', value: 'Arq. Alfio Sambataro' },
+    { label: 'Typology', value: 'Complementary Building' },
+    { label: 'Location', value: 'Moneda 759, Santiago, Chile' },
+    { label: 'Theme', value: 'Refunctionalization' },
     {
-        label: 'Colaboradores',
-        value: 'Arq. María Paz Carvajal V., Carolina Díaz S., Arq. Marcela Durán G., Macarena Aranda J.',
+        label: 'Services',
+        value: 'General architectural executive project, Construction management',
     },
-    { label: 'Asesores', value: 'Arq. Andrés Cumsille, Ing. Jorge Sommerhoff; Ing. Gastón Klein' },
-    { label: 'Fotografías', value: 'Arq. María Paz Carvajal V.' },
-    { label: 'Superficie aproximada total', value: '1.800 m2' },
-    { label: 'Superficie aproximada intervenida', value: '1.800 m2' },
-    { label: 'Año', value: '2013' },
+    { label: 'Client', value: 'Santiago Municipality' },
+    { label: 'General architectural project', value: 'Arch. Alfio Sambataro' },
+    {
+        label: 'Collaborators',
+        value: 'Arch. María Paz Carvajal V., Carolina Díaz S., Arch. Marcela Durán G., Macarena Aranda J.',
+    },
+    {
+        label: 'Consultants',
+        value: 'Arch. Andrés Cumsille, Eng. Jorge Sommerhoff; Eng. Gastón Klein',
+    },
+    { label: 'Photography', value: 'Arch. María Paz Carvajal V.' },
+    { label: 'Total approximate area', value: '1,800 m2' },
+    { label: 'Approximate intervened area', value: '1,800 m2' },
+    { label: 'Year', value: '2013' },
     {
         web: 'http://www.municipal.cl/page/escuela-de-ballet-del-teatro-municipal',
         href: 'http://www.municipal.cl/page/escuela-de-ballet-del-teatro-municipal',
@@ -173,18 +179,18 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Escuela de ballet de Santiago">
+<Layout description="" title="Ballet school Santiago">
     <Base>
         <ProjectPage
             images={images}
             id="ballet"
             city="Santiago, Chile"
             year="2013"
-            room="Escuela de ballet"
-            project="Escuela de ballet de Santiago"
-            description1="El edificio Moneda 759, adyacente al Teatro Municipal de Santiago, se encuentra ubicado en un sector de Conservación Histórica. Su historia data del año 1757, a partir del cual sufrió grandes mutaciones adoptando finalmente un marcado estilo neorrenacentista hacia principios del siglo veinte. En 1987 pasó a depender del Teatro Municipal de Santiago, funcionando principalmente como escuela de ballet hasta la actualidad. Los grandes daños producidos por el sismo del año 2010 dieron origen a un proyecto de reparación y refuncionalización del edificio a cargo del Arq. Alfio Sambataro."
-            description2="El diseño del masterplan para el proyecto de recuperación, remodelación y reorganización programática para la Escuela de Ballet, requirió de estudios previos, a cargo de ingenieros que determinaron el nivel de daño estructural y las soluciones a ejecutar para la recuperación patrimonial. Como fórmula preventiva ante futuros sismos, se incluyeron una serie de refuerzos y nuevas estructuras metálicas para que trabajaran conjuntamente con el sistema mixto original del edificio, conformado por mampostería portante, metal y madera. Los espacios de valor arquitectónico, como las fachadas, la cubierta vidriada del patio central interior y el hall de acceso, fueron especialmente tratados de modo de recuperar su valor y diseño original. También se repararon los cielorrasos, revoques, puertas y ventanas de madera."
-            description3="Se diseñaron nuevas salas y camarines para el ballet, así como también se reacondicionaron las salas del coro profesional y se habilitaron nuevas oficinas administrativas. Se renovó la infraestructura de instalaciones sanitarias, eléctricas y climatización. A su vez, sumaron adecuaciones tecnológicas, como la instalación de pisos de rebote tipo spring wood en las salas de ballet y el acondicionamiento acústico en las salas corales. El proyecto incluyó la ubicación del DAE -centro de difusión de las artes escénicas- entidad que se dedica a la recopilación, tratamiento y difusión pública de valioso material histórico de la actividad."
+            room="Ballet school"
+            project="Ballet school Santiago"
+            description1="The building Moneda 759, adjacent to the Municipal Theater of Santiago, is located in a sector of Historical Conservation. Its history dates back to the year 1757, after which it suffered great mutations, finally adopting a marked Neo-Renaissance style towards the beginning of the twentieth century. In 1987 it became dependent on the Municipal Theater of Santiago, functioning mainly as a ballet school until today. The great damage caused by the earthquake of 2010 gave rise to a project to repair and refurbish the building under the responsibility of Arch. Alfio Sambataro."
+            description2="The design of the masterplan for the project of recovery, remodeling and programmatic reorganization for the School of Ballet, required previous studies, in charge of engineers who determined the level of structural damage and the solutions to be executed for the patrimonial recovery. As a preventive formula against future earthquakes, a series of reinforcements and new metallic structures were included to work together with the original mixed system of the building, consisting of load-bearing masonry, metal and wood."
+            description3="The spaces of architectural value, such as the facades, the glazed roof of the inner central courtyard and the entrance hall, were specially treated in order to recover their value and original design. The ceilings, plasters, wooden doors and windows were also repaired.New rooms and dressing rooms for the ballet were designed, as well as the professional choir rooms which were reconditioned and new administrative offices were installed. The infrastructure of sanitary, electrical and air conditioning installations was renewed. At the same time, technological adaptations were added, such as the installation of sprung floors in the ballet rooms and the acoustic conditioning in the choral rooms. The project included the location of the DAE -center of dissemination of the performing arts- entity that is dedicated to the collection, treatment and public dissemination of valuable historical material of the activity."
             img={ballet}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
