--- a/src/pages/en/projects/buildings/superior-de-arte.astro
+++ b/src/pages/en/projects/buildings/superior-de-arte.astro
@@ -11,23 +11,23 @@ import superior4 from '../../../../img/projects/superior/superior4.webp';
 import superior5 from '../../../../img/projects/superior/superior5.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Edificio complementario' },
+    { label: 'Typology', value: 'Complementary building' },
     {
-        label: 'Ubicación',
+        label: 'Location',
         value: 'Santiago del Estero 1746, Mar del Plata, Buenos Aires, Argentina.',
     },
-    { label: 'Temática', value: 'Proyecto de Remodelación Teatro Tronador' },
-    { label: 'Servicios', value: 'Proyecto ejecutivo' },
-    { label: 'Comitente', value: 'Marcelo González' },
+    { label: 'Theme', value: 'Tronador Theater Renovation Project' },
+    { label: 'Services', value: 'Executive project' },
+    { label: 'Client', value: 'Marcelo González' },
     {
-        label: 'Proyecto general de arquitectura',
-        value: 'Arq. Mariano Englebienne, Arq. Leonardo Boccardo',
+        label: 'General architectural project',
+        value: 'Arch. Mariano Englebienne, Arch. Leonardo Boccardo',
     },
-    { label: 'Asesor acústico', value: 'Ing. Jorge Sommerhoff' },
-    { label: 'Colaboradores', value: 'Arq. María Virginia Castro' },
-    { label: 'Superficie aproximada total', value: '4.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '4.000 m2' },
-    { label: 'Año', value: '2017-2018' },
+    { label: 'Acoustic consultant', value: 'Eng. Jorge Sommerhoff' },
+    { label: 'Collaborators', value: 'Arch. María Virginia Castro' },
+    { label: 'Total approximate area', value: '4,000 m²' },
+    { label: 'Approximate intervened area', value: '4,000 m²' },
+    { label: 'Year', value: '2017-2018' },
     {
         web: 'http://www.teatrocolon.org.ar/es/instituto-superior-de-arte',
         href: 'http://www.teatrocolon.org.ar/es/instituto-superior-de-arte',
@@ -70,17 +70,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Instituto Superior de Arte del teatro Colón">
+<Layout description="" title="Higher Institute of Art of the Colón Theater">
     <Base>
         <ProjectPage
             images={images}
             id="superior"
             city="Mar del Plata, Argentina"
             year="2017-2018"
-            room="Escuela de ballet"
-            project="Instituto Superior de Arte del teatro Colón"
-            description1="Dentro del proyecto del complejo teatral completamente remodelado del Teatro Tronador de Mar del Plata se ubica la Sede del Instituto Superior de Arte del Teatro Colón."
-            description2="Se ejecutó el programa integral de la escuela de ballet con los correspondientes salones de danza y áreas de apoyo tales como vestuarios para alumnos, camarines de maestros, kinesiología, sala audiovisual y área administrativa. Se equiparon las salas con un piso de rebote fijo de alta tecnología, espejos sin distorsión de imagen y barrales de danza especialmente diseñados. Los camarines se proyectaron con amoblamiento específico para la actividad y servicios individuales para cada ambiente. Se realizó el acondicionamiento acústico para lograr el adecuado control de ruidos desde el interior hacia el exterior y viceversa."
+            room="Ballet School"
+            project="Higher Institute of Art of the Colón Theater"
+            description1="Within the project of the remodeled theatrical complex of the Tronador Theater in Mar del Plata is located the venue of the Higher Institute of Art of the Teatro Colón. The integral program of the ballet school was executed with the corresponding dance halls and support areas such as changing rooms for students, teachers' dressing rooms, kinesiology, audiovisual room and administrative area. "
+            description2="The rooms were equipped with a high-tech fixed sprung floor, mirrors without image distortion and specially designed dance bars. The dressing rooms were designed with specific furnishing for the activity and individual services for each environment. Acoustic conditioning was carried out to achieve adequate noise control from the inside to the outside and vice versa."
             img={superior}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
