--- a/src/pages/en/projects/buildings/teatro-municipal.astro
+++ b/src/pages/en/projects/buildings/teatro-municipal.astro
@@ -21,18 +21,18 @@ import municipal14 from '../../../../img/projects/municipal/municipal14.webp';
 import municipal15 from '../../../../img/projects/municipal/municipal15.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Edificio Complementario' },
-    { label: 'Ubicación', value: 'Agustinas 794, Santiago, Chile' },
-    { label: 'Temática', value: 'Remodelación' },
-    { label: 'Servicios', value: 'Proyecto ejecutivo, Dirección de obra' },
-    { label: 'Comitente', value: 'Municipalidad de Santiago' },
-    { label: 'Proyecto general de arquitectura', value: 'Arq. Alfio Sambataro' },
+    { label: 'Typology', value: 'Complementary Building' },
+    { label: 'Location', value: 'Agustinas 794, Santiago, Chile' },
+    { label: 'Theme', value: 'Remodeling' },
+    { label: 'Services', value: 'Executive project, Construction management' },
+    { label: 'Client', value: 'Santiago Municipality' },
+    { label: 'General architectural project', value: 'Arch. Alfio Sambataro' },
     {
-        label: 'Colaboradores',
-        value: 'Arq. María Paz Carvajal V., Carolina Díaz S., Arq. Marcela Durán G., Macarena Aranda J.',
+        label: 'Collaborators',
+        value: 'Arch. María Paz Carvajal V., Carolina Díaz S., Arch. Marcela Durán G., Macarena Aranda J.',
     },
-    { label: 'Asesores', value: 'Arq. Andrés Cumsille' },
-    { label: 'Año', value: '2014' },
+    { label: 'Advisors', value: 'Arch. Andrés Cumsille' },
+    { label: 'Year', value: '2014' },
     { web: 'http://www.municipal.cl/', href: 'http://www.municipal.cl/' },
 ];
 
@@ -132,7 +132,7 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Camarines Teatro Municipal de Santiago">
+<Layout description="" title="Municipal Theater dressing room - Santiago">
     <Base>
         <ProjectPage
             images={images}
@@ -140,10 +140,10 @@ const images = [
             city="Santiago, Chile"
             year="2014"
             room="Camarines"
-            project="Camarines Teatro Municipal de Santiago"
-            description1="El Teatro Municipal de Santiago, inaugurado originalmente en el año 1857 y diseñado por el arquitecto François Brunet de Baines y el ingeniero Felipe Augusto Charme de l´Isle, es la Ópera Nacional de Chile y principal escenario para la música clásica del país.El proyecto de remodelación de los camarines del Teatro Municipal de Santiago requirió un relevamiento y estudio de diagnóstico que dio como resultado las soluciones a implementar para transformar los espacios y adecuarlos para que funcionen correctamente."
-            description2="En una primera etapa se realizaron los camarines de la compañía de ballet del Teatro Municipal de Santiago. Se reorganizó el espacio de cada camarín para aprovechar al máximo la superficie disponible, ya que por tratarse de un edificio que es Monumento Histórico Nacional, no se podía modificar la configuración del espacio existente. Se diseñó el amoblamiento completo, especialmente dedicado a la actividad del ballet. Además, se proyectaron los núcleos sanitarios, aumentando su capacidad de uso simultáneo. El proyecto comprendió los camarines de las primeras figuras, co-primarios, de maestros, de cuerpo de ballet y la sala de kinesiología."
-            description3="En una segunda etapa se construyeron los camarines del primero y segundo nivel, refuncionalizando los espacios existentes para que alberguen el equipamiento diseñado a medida para su uso específico. Se remodelaron completamente los núcleos sanitarios. El proyecto comprendió el green room, los camarines de primeras figuras, grupales y sala de maquillaje."
+            project="Municipal Theater dressing room - Santiago"
+            description1="The Municipal Theater of Santiago, originally inaugurated in 1857 and designed by the architect François Brunet de Baines and the engineer Felipe Augusto Charme de l'Isle, is the National Opera of Chile and the main stage for the country's classical music.The project of remodeling of the dressing rooms of the Municipal Theater of Santiago required a diagnostic study that resulted in the solutions to be implemented to transform the spaces and adapt them so that they function correctly."
+            description2="In a first stage the dressing rooms of the ballet company of the Municipal Theater of Santiago were made. The space of each dressing room was reorganized in order to make the most of the available space, since, being a building that is a National Historic Monument, the configuration of the existing space could not be modified. The complete furnishing was designed, especially dedicated to the activity of the ballet. In addition, washrooms were designed, increasing their capacity for simultaneous use. The project included the dressing rooms of the first figures, co-primary, teachers, ballet corps and the kinesiology room."
+            description3="In a second stage, the first and second level dressing rooms were built, refurbishing the existing spaces to house the custom designed furniture for its specific use. The washrooms were completely remodeled. The project included the green room, the dressing rooms of first figures, group and makeup room."
             img={municipal}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
