--- a/src/pages/en/projects/centers/cultural-recoleta.astro
+++ b/src/pages/en/projects/centers/cultural-recoleta.astro
@@ -26,27 +26,27 @@ import recoleta19 from '../../../../img/projects/recoleta/recoleta19.webp';
 import recoleta20 from '../../../../img/projects/recoleta/recoleta20.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Centro Cultural' },
-    { label: 'Ubicación', value: 'Junín 1930, Ciudad Autónoma de Buenos Aires, Argentina' },
+    { label: 'Typology', value: 'Cultural Center' },
+    { label: 'Location', value: 'Junín 1930, Autonomous City of Buenos Aires, Argentina' },
     {
-        label: 'Temática',
-        value: 'Proyecto de Restauración, refuncionalización y equipamiento de las salas de espectáculos “El Aleph” y “Villa Villa”',
+        label: 'Theme',
+        value: 'Restoration project, refunctionalization and equipment of the "El Aleph" and "Villa Villa" performance halls',
     },
-    { label: 'Servicios', value: 'Proyecto licitatorio escenotécnico' },
+    { label: 'Services', value: 'Scenic technical bidding project' },
     {
-        label: 'Comitente',
-        value: 'Subsecretaría de Políticas Culturales y Nuevas Audiencias, Ministerio de Cultura de la Ciudad de Buenos Aires',
+        label: 'Client',
+        value: 'Undersecretariat of Cultural Policies and New Audiences, Ministry of Culture of the City of Buenos Aires',
     },
-    { label: 'Proyecto general de arquitectura', value: 'Arq. Jerónimo Bedel' },
+    { label: 'General architectural project', value: 'Arch. Jerónimo Bedel' },
     {
-        label: 'Asesores',
-        value: 'Arq. Andrés Cumsille, Ing. Gustavo Basso, Ing. Juan Antonio Vargas',
+        label: 'Advisors',
+        value: 'Arch. Andrés Cumsille, Eng. Gustavo Basso, Eng. Juan Antonio Vargas',
     },
-    { label: 'Colaboradores', value: 'Arq. María Virginia Castro' },
-    { label: 'Localidades', value: '130 (El Aleph) + 350 (Villa Villa)' },
-    { label: 'Superficie aproximada total', value: '19.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 5.000.000' },
-    { label: 'Año', value: '2016' },
+    { label: 'Collaborators', value: 'Arch. María Virginia Castro' },
+    { label: 'Seating capacity', value: '130 (El Aleph) + 350 (Villa Villa)' },
+    { label: 'Total approximate area', value: '19,000 sq m' },
+    { label: 'Approximate intervention amount', value: 'US$ 5,000,000' },
+    { label: 'Year', value: '2016' },
     { web: 'http://centroculturalrecoleta.org/', href: 'http://centroculturalrecoleta.org/' },
 ];
 
@@ -179,18 +179,18 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Centro Cultural Recoleta">
+<Layout description="" title="The Recoleta Cultural Center">
     <Base>
         <ProjectPage
             images={images}
             id="recoleta"
             city="Buenos Aires, Argentina"
             year="2016"
-            room="Salas el Aleph y Villa Villa"
-            project="Centro Cultural Recoleta"
-            description1="El Centro Cultural Recoleta es un complejo de exhibiciones parte del circuito turístico de la recoleta de Buenos Aires, declarado Monumento Histórico Nacional. Realizado por el renombrado arquitecto Clorindo Testa junto con los arquitectos Jacques Bedel y Luis Benedit fue inaugurado por primera vez como tal en 1980. Su historia data del año 1716 cuando el solar fue donado a los frailes franciscanos recoletos, quienes lo ocuparon como claustro. Luego de numerosos cambios de uso, el edificio fue remodelado en 1880 por el arquitecto Juan Antonio Buschiazzo quien realizó una serie de reformas, entre ellas la basílica icónica que sería restaurada en 2010 conteniendo actualmente la sala “El Aleph” con capacidad para 130 personas. La sala Villa Villa inaugurada en 2001, posee una capacidad para 350 personas y funciona como sala multipropósito.El proyecto de refuncionalización y puesta en valor del Centro Cultural Recoleta en el aspecto escenotécnico, abarca las salas “El Aleph” y “Villa Villa”, con sus dependencias artísticas. Se provee nueva tecnología para ambas salas, incluyendo el equipamiento escenotécnico para salas polivalentes, áreas de apoyo técnico y artístico, sistemas de iluminación escénica y escenarios multifuncionales."
-            description2="La sala El Aleph se dotó de la mayor flexibilidad posible de usos dentro de sus posibilidades morfológicas particulares, teniendo en cuenta que se trata de un edificio patrimonial. Así se posibilitarán las producciones de teatro de prosa, concierto de pequeñas orquestas, danza contemporánea, recitales y shows musicales, eventos especiales y conferencias. Su equipamiento escenotécnico consistió en un sistema de parrilla de suspensión no transitable con el objetivo de aprovechar al máximo la altura de despeje, varas de aluminio sin carrera vertical, sistemas de suspensión auxiliares, vestimenta teatral y telón principal, sistemas de intercomunicación técnica, audio y video. Además se proyectaron los elementos acústicos necesarios, la iluminación escénica, un piso de escenario modulado y una platea retráctil que permiten al salón adoptar múltiples configuraciones."
-            desciption3="El espacio Villa Villa se proyectó para que funcione como una sala experimental constituyendo una usina de actividades creativas relacionadas con las artes escénicas. Se reorganizaron las áreas de apoyo técnico y artísticos, para lograr mejores interrelaciones espaciales y aumentar la capacidad de recepción de artistas y personal vinculado a la producción. Es así como se remodelaron totalmente los camarines de artistas, se generaron las áreas típicas de apoyo como Green Room, Bodegas de material genérico técnico y talleres. El equipamiento escenotécnico incluye un sistema de parrilla y dos niveles de puentes técnicos que permiten operar en toda la superficie de la sala según la configuración requerida. A su vez se diseñó un sistema de varas motorizadas de suspensión que consta de 18 líneas, las que tienen la posibilidad de deslizarse en el eje longitudinal de la sala, cubriendo cualquier posición requerida. Se incluyeron también un sistema manual auxiliar complementario y sistemas auxiliares de montaje. El proyecto contempló la vestimenta teatral, iluminación escénica, intercomunicación técnica, audio y video. Se proyectaron los elementos acústicos necesarios para limitar la transmisión de vibraciones y ruidos desde el interior hacia el exterior o viceversa."
+            room="Aleph and Villa Villa auditoriums"
+            project="The Recoleta Cultural Center"
+            description1="The Recoleta Cultural Center is an exhibition complex part of the tourist circuit of the City of Buenos Aires, declared a National Historic Monument. Carried out by the renowned architect Clorindo Testa together with the architects Jacques Bedel and Luis Benedit, it was inaugurated for the first time as such in 1980. Its history dates back to 1716 when the site was donated to the Franciscan Recollect friars, who occupied it as a cloister. After numerous changes of use, the building was remodeled in 1880 by the architect Juan Antonio Buschiazzo who carried out a series of reforms, including the iconic basilica that would be restored in 2010, currently housing the El Aleph auditorium with capacity for 130 people. The Villa Villa auditorium, inaugurated in 2001, has a capacity for 350 people and functions as a multipurpose room. The refurbishment and valorization project of the Recoleta Cultural Center in the theater architecture aspect, includes the El Aleph and Villa Villa auditoriums, with their artistic dependencies. New technology was provided for both halls, including stage equipment for multi-purpose rooms, technical and artistic support areas, stage lighting systems and multifunctional stages."
+            description2="The room El Aleph was equipped with the greatest flexibility of uses possible within its particular morphological capabilities, taking into account that it is a heritage building. This will enable the productions of theater, concert of small orchestras, contemporary dance, recitals, musical shows, special events and conferences. Its stage equipment consisted of a non-passable rigging grid system with the objective of maximizing the clearance height, aluminum battens without vertical race, auxiliary rigging systems, set dressing and main curtain, technical intercom systems, audio and video. In addition, the necessary acoustic elements, stage lighting, a modulated stage floor and retractable stalls that allow the room to adopt multiple configurations were designed."
+            desciption3="The Villa Villa auditorium was designed to function as an experimental hall constituting a powerhouse of creative activities related to the performing arts. The areas of technical and artistic support were reorganized to achieve better spatial interrelations and increase the reception capacity of artists and personnel linked to production. This is how artists' dressing rooms were completely remodeled, typical support areas such as Green Room, generic technical material warehouses and workshops were generated. The stage equipment includes a grid system and two levels of technical fly galleries that allow operating on the entire surface of the auditorium according to the required configuration. At the same time, a system of motorized battens was designed consisting of 18 lines, which have the possibility of sliding on the longitudinal axis of the room, covering any required position. A complementary auxiliary manual system and auxiliary assembly systems were also included. The project contemplated the stage dressing, stage lighting, technical intercommunication, audio and video. The acoustic elements necessary to limit the transmission of vibrations and noise from the interior to the exterior or vice versa were designed."
             img={recoleta}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
