--- a/src/pages/en/projects/centers/gabriela-mistral.astro
+++ b/src/pages/en/projects/centers/gabriela-mistral.astro
@@ -26,23 +26,23 @@ import mistral19 from '../../../../img/projects/mistral/mistral19.webp';
 import mistral20 from '../../../../img/projects/mistral/mistral20.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Centro Cultural' },
-    { label: 'Ubicación', value: "Av. Libertador Bernardo O'Higgins 227, Santiago, Chile" },
-    { label: 'Temática', value: 'Asesoramiento escenotécnico para la Inspección Fiscal de Diseño' },
-    { label: 'Servicios', value: 'Inspección fiscal de diseño y de obra' },
-    { label: 'Comitente', value: 'Ministerio de Obras Públicas' },
+    { label: 'Typology', value: 'Cultural Center' },
+    { label: 'Location', value: "Av. Libertador Bernardo O'Higgins 227, Santiago, Chile" },
+    { label: 'Theme', value: 'Scenotechnical consulting for Design Fiscal Inspection' },
+    { label: 'Services', value: 'Fiscal inspection of design and construction' },
+    { label: 'Client', value: 'Ministry of Public Works' },
     {
-        label: 'Proyecto general de arquitectura',
-        value: 'Arq. Cristian Fernández y Lateral Arquitectos',
+        label: 'General architectural project',
+        value: 'Arch. Cristian Fernández and Lateral Arquitectos',
     },
     {
-        label: 'Asesores',
-        value: 'Ing. Jorge Sommerhoff, Ing. Jorge Cárdena, Ing. Juan Antonio Vargas',
+        label: 'Consultants',
+        value: 'Eng. Jorge Sommerhoff, Eng. Jorge Cárdena, Eng. Juan Antonio Vargas',
     },
-    { label: 'Localidades', value: '2400' },
-    { label: 'Superficie aproximada total', value: '35.000 m2' },
-    { label: 'Monto aproximado total', value: 'US$ 45.000.000' },
-    { label: 'Año', value: 'Etapa 1- 2008-2010; Etapa 2- 2015' },
+    { label: 'Capacity', value: '2400' },
+    { label: 'Total approximate area', value: '35,000 m2' },
+    { label: 'Total approximate cost', value: 'US$ 45,000,000' },
+    { label: 'Year', value: 'Stage 1- 2008-2010; Stage 2- 2015' },
     { web: 'http://www.gam.cl/', href: 'http://www.gam.cl/' },
 ];
 
@@ -172,18 +172,18 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Centro cultural Gabriela Mistral">
+<Layout description="" title="Gabriela Mistral Cultural Center">
     <Base>
         <ProjectPage
             images={images}
             id="mistral"
             city="Santiago, Chile"
             year="2008-2010 y 2015"
-            room="Salas de música, prosa y polifuncional, etapas 1 y 2"
-            project="Centro cultural Gabriela Mistral"
-            description1="El edificio original diseñado por los arquitectos José Covacevic, Hugo Gaggero, Juan Echenique, José Medina y Sergio González Espinoza en el año 1972, fue utilizado por distintos organismos y para diversos usos en el transcurso de los años, hasta que luego del incendio de 2006 se reconstruyó creándose el centro cultural actual. El Centro Cultural Gabriela Mistral inaugurado en el año 2010 cuenta con una sala principal para 2400 espectadores y diez salas para espectáculos, ensayos, exhibición y seminarios; siendo resultado del concurso ganado por los estudios de arquitectura Cristian Fernández y Lateral arquitectos."
-            description2="En el año 2008 se realizó la inspección fiscal de diseño de la Sección 1 completa del proyecto ejecutivo y de las etapas de anteproyecto y proyecto de la Sección 2 para la Dirección Regional Metropolitana de Arquitectura del Ministerio de Obras Públicas. Se revisó toda la documentación gráfica y escrita realizada por el estudio Arq. Cristian Fernández, en lo concerniente a la arquitectura teatral y escenotecnia.Durante la construcción de la etapa 1 de la habilitación del Centro Cultural, se realizó la inspección de obra para la especialidad escenotecnia.Sala polifuncional, Santiago de Chile, 2015"
-            decription3="En el año 2015 se realizó la Inspección Fiscal de diseño para la Dirección Regional Metropolitana de Arquitectura del Ministerio de Obras Públicas, del proyecto del estudio del Arq. Cristián Fernández en la especialidad escenotécnica y de arquitectura teatral con análisis de documentación gráfica y especificaciones técnicas para licitación pública de la etapa 2."
+            room="Music, prose and multipurpose rooms, stages 1 and 2"
+            project="Gabriela Mistral Cultural Center"
+            description1="The original building designed by the architects José Covacevic, Hugo Gaggero, Juan Echenique, José Medina and Sergio González Espinoza in 1972, was used by different agencies and for various uses over the years, until it caught fire in 2006 and was rebuilt creating the current cultural center. The Gabriela Mistral Cultural Center inaugurated in 2010 has a main hall for 2400 spectators and ten rooms for shows, rehearsals, exhibitions and seminars; being the result of the contest won by the architecture studios Cristian Fernández and Lateral arquitectos."
+            description2="In 2008, the design inspection of Section 1 of the executive project and of the preliminary project stages of Section 2 for the Metropolitan Regional Office of Architecture of the Ministry of Public Works were carried out. All the graphic and written documentation produced by the Arq. Cristian Fernández studio regarding theater architecture and stage design was reviewed.During the construction of stage 1 of the habilitation of the Cultural Center, the inspection for the stagecraft specialty was realized.Multifunctional room, Santiago de Chile, 2015"
+            decription3="In 2015, the Fiscal Design Inspection was carried out for the Metropolitan Regional Office of Architecture of the Ministry of Public Works, for the project of the studio of Architect Cristián Fernández in the theater architecture specialty. All graphic documentation and technical specifications were written for public bidding of stage 2."
             img={mistral}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
