--- a/src/pages/en/projects/sands/arena-santiago.astro
+++ b/src/pages/en/projects/sands/arena-santiago.astro
@@ -20,19 +20,19 @@ import arena13 from '../../../../img/projects/arena/arena13.webp';
 import arena14 from '../../../../img/projects/arena/arena14.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Estadio' },
-    { label: 'Ubicación', value: 'Av. Beauchef 1204, Santiago, Chile' },
-    { label: 'Temática', value: 'Proyecto de remodelación y modernización' },
-    { label: 'Servicios', value: 'Proyecto licitatorio escenotécnico' },
-    { label: 'Comitente', value: 'Arena Santiago' },
-    { label: 'Director ejecutivo', value: 'Enrique Bordolini' },
-    { label: 'Asesores', value: 'Ing. Juan Antonio Vargas, Ing. Jorge Sommerhoff' },
-    { label: 'Visualización arquitectónica digital', value: 'Alfredo Santis' },
-    { label: 'Localidades', value: '16.500' },
-    { label: 'Superficie aproximada total', value: '28.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '7.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 2.000.000' },
-    { label: 'Año', value: '2005-2006' },
+    { label: 'Typology', value: 'Stadium' },
+    { label: 'Location', value: 'Av. Beauchef 1204, Santiago, Chile' },
+    { label: 'Theme', value: 'Renovation and modernization project' },
+    { label: 'Services', value: 'Scenotechnical bidding project' },
+    { label: 'Client', value: 'Arena Santiago' },
+    { label: 'Executive Director', value: 'Enrique Bordolini' },
+    { label: 'Consultants', value: 'Eng. Juan Antonio Vargas, Eng. Jorge Sommerhoff' },
+    { label: 'Digital architectural visualization', value: 'Alfredo Santis' },
+    { label: 'Capacity', value: '16,500' },
+    { label: 'Total approximate area', value: '28,000 m2' },
+    { label: 'Approximate intervention area', value: '7,000 m2' },
+    { label: 'Approximate intervention cost', value: 'US$ 2,000,000' },
+    { label: 'Year', value: '2005-2006' },
     { web: 'http://movistararena.cl/', href: 'http://movistararena.cl/' },
 ];
 
@@ -126,17 +126,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Arena Santiago">
+<Layout description="" title="The Arena Santiago">
     <Base>
         <ProjectPage
             images={images}
             id="arena"
             city="Santiago, Chile"
             year="2005-2006"
-            room="Arena"
-            project="Arena Santiago"
-            description1="La Arena Santiago es un edificio tipo estadio, con capacidad para 16.500 espectadores, construido a partir del inconcluso Patio Techado Parque O’Higgins concebido por primera vez por el arquitecto Mario Recordón en 1956 e inaugurado en 2006 con diseño para albergar eventos deportivos, comerciales, culturales y de ocio."
-            description2="El proyecto escenotécnico contó con un estudio para ampliar la flexibilidad en la configuración escénica y del recinto. Se realizaron proyectos alternativos para el sistema de rigging, escenario desmontable y sus correspondientes sistemas de suspensión e iluminación escénica. Se diseñó una parrilla metálica, colgada de la estructura resistente de la cubierta, que permitía la instalación de los sistemas motorizados de suspensión automatizados; de refuerzo sonoro; de proyección de video y de iluminación."
+            room="Stadium"
+            project="The Arena Santiago"
+            description1="The Arena Santiago is a stadium-like building, with a capacity for 16500 spectators, built from the unfinished Patio Techado O'Higgins Park first conceived by the architect Mario Recordón in 1956 and inaugurated in 2006 designed to host sporting, commercial, cultural and leisure events."
+            description2="The theater architecture project had a study to expand the flexibility in the stage and enclosure configuration. Alternative projects were carried out for the rigging system, removable stage and its corresponding suspension systems and stage lighting. A metal grid was designed, hanging from the resistant structure of the roof, which allowed the installation of automated motorized rigging systems; sound reinforcement; of video projection and lighting."
             img={arena}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
