--- a/src/pages/en/projects/scenography/barbero.astro
+++ b/src/pages/en/projects/scenography/barbero.astro
@@ -17,16 +17,16 @@ import barbero10 from '../../../../img/projects/barbero/barbero10.webp';
 import barbero11 from '../../../../img/projects/barbero/barbero11.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Municipal de Santiago, Santiago, Chile' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Eric Vigié' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Diseño de vestuario', value: 'Imme Möller' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Visualización arquitectónica digital', value: 'Alfredo Santis' },
-    { label: 'Año', value: '2002' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Municipal de Santiago, Santiago, Chile' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Eric Vigié' },
+    { label: 'Scenographic design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Imme Möller' },
+    { label: 'Technical design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Digital architectural visualization', value: 'Alfredo Santis' },
+    { label: 'Year', value: '2002' },
 ];
 
 const asesores = ['-'];
@@ -101,17 +101,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="barbero">
+<Layout description="" title="The Barber of Seville">
     <Base>
         <ProjectPage
             images={images}
             id="barbero"
             city="Bógota, Colombia"
             year="2002"
-            room="Ópera de Colombia"
-            project="Barbero de Sevilla"
-            description1="La ópera bufa en dos actos con música de Gioachino Rossini y libreto de Cesare Sterbini, basado en la comedia de Pierre-Augustin de Beaumarchais, fue estrenada originalmente en 1816."
-            description2="El proyecto de la producción escenográfica para la Ópera de Colombia del año 2002 incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            room="Ópera of Colombia"
+            project="The Barber of Seville"
+            description1="The opera buffa in two acts with music by Gioachino Rossini and libretto by Cesare Sterbini, based on the comedy of Pierre-Augustin de Beaumarchais, was originally released in 1816."
+            description2="The scenographic production project for the Opera of Colombia in 2007 included the design of engineering and set design systems; stagecraft machinery, modular systems for units of compact transport; and special effects mechanisms."
             img={barbero}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
