--- a/src/pages/en/projects/scenography/boris.astro
+++ b/src/pages/en/projects/scenography/boris.astro
@@ -10,15 +10,15 @@ import boris3 from '../../../../img/projects/boris/boris3.webp';
 import boris4 from '../../../../img/projects/boris/boris4.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Colón, Buenos Aires, Argentina' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Hugo de Ana' },
-    { label: 'Diseño escenográfico', value: 'Hugo de Ana' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Vestuario', value: 'Hugo de Ana' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Año', value: '2011' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Colón, Buenos Aires, Argentina' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Hugo de Ana' },
+    { label: 'Scenic Design', value: 'Hugo de Ana' },
+    { label: 'Lighting Design', value: 'Enrique Bordolini' },
+    { label: 'Costume Design', value: 'Hugo de Ana' },
+    { label: 'Technical Design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Year', value: '2011' },
 ];
 
 const asesores = ['-'];
@@ -58,10 +58,10 @@ const images = [
             id="boris"
             city="Santiago, Chile"
             year="2011"
-            room="Teatro municipal de Santiago"
+            room="Municipal Theater of Santiago"
             project="Boris Godunov"
-            description1=" Ópera en cuatro actos y un prólogo con música y libreto en ruso de Modest Músorgski. Se basa en el drama homónimo de Aleksandr Pushkin, y fue estrenada el 27 de enero de 1874, en Teatro Mariinski de San Petersburgo."
-            description2="El proyecto de la producción escenográfica para el Teatro Municipal de Santiago, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            description1="Opera in four acts and a prologue with music and libretto in Russian by Modest Musorgski. It is based on Aleksandr Pushkin's homonymous drama, and was premiered on January 27, 1874, at the Mariinsky Theater in St. Petersburg."
+            description2="The scenographic production project for the Municipal Theater of Santiago included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={boris}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
