--- a/src/pages/en/projects/scenography/egitto.astro
+++ b/src/pages/en/projects/scenography/egitto.astro
@@ -26,16 +26,16 @@ import egitto19 from '../../../../img/projects/egitto/egitto19.webp';
 import egitto20 from '../../../../img/projects/egitto/egitto20.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Colón, Buenos Aires, Argentina' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Pablo Maritano' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Diseño de vestuario', value: 'Sofía di Nunzio' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro, Arq. Agostina Sambataro' },
-    { label: 'Visualización arquitectónica digital', value: 'Alfredo Santis' },
-    { label: 'Año', value: '2017' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Colón, Buenos Aires, Argentina' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Pablo Maritano' },
+    { label: 'Scenographic Design', value: 'Enrique Bordolini' },
+    { label: 'Lighting Design', value: 'Enrique Bordolini' },
+    { label: 'Costume Design', value: 'Sofía di Nunzio' },
+    { label: 'Technical Design', value: 'Arch. Alfio Sambataro, Arch. Agostina Sambataro' },
+    { label: 'Digital Architectural Visualization', value: 'Alfredo Santis' },
+    { label: 'Year', value: '2017' },
 ];
 
 const asesores = ['-'];
@@ -171,10 +171,10 @@ const images = [
             id="egitto"
             city="Buenos Aires, Argentina"
             year="2017"
-            room="Teatro Colón"
+            room="Colón Theater"
             project="Giulio Cesare in Egitto"
-            description1="Ópera en tres actos con música de Georg Friedrich Händel y libreto en italiano de Nicola Francesco Haym quien usó un libreto anterior por Giacomo Francesco Bussani musicado por Antonio Sartorio."
-            description2="El proyecto de la producción escenográfica para el Teatro Colón de Buenos Aires, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos, sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto y mecanismos de efectos especiales."
+            description1="Opera in three acts with music by Georg Friedrich Händel and libretto in Italian by Nicola Francesco Haym who used a previous libretto by Giacomo Francesco Bussani, played by Antonio Sartorio."
+            description2="The scenographic production project for the Teatro Colón included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={egitto}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
