--- a/src/pages/en/projects/scenography/giovanni.astro
+++ b/src/pages/en/projects/scenography/giovanni.astro
@@ -19,16 +19,16 @@ import giovanni12 from '../../../../img/projects/giovanni/giovanni12.webp';
 import giovanni13 from '../../../../img/projects/giovanni/giovanni13.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Colón, Buenos Aires, Argentina' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Alejandro Chacón' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Vestuario', value: 'Adán Martínez' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Visualización arquitectónica digital', value: 'Alfredo Santis' },
-    { label: 'Año', value: '2006' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Colón, Buenos Aires, Argentina' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Alejandro Chacón' },
+    { label: 'Scenographic design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Adán Martínez' },
+    { label: 'Technical design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Digital architectural visualization', value: 'Alfredo Santis' },
+    { label: 'Year', value: '2006' },
 ];
 
 const asesores = ['-'];
@@ -122,10 +122,10 @@ const images = [
             id="giovanni"
             city="Bogotá, Colombia"
             year="2006"
-            room="Ópera de Colombia"
+            room="Colombian Opera"
             project="Don Giovanni"
-            description1="Drama jocoso en dos actos con música de Wolfgang Amadeus Mozart y libreto en italiano de Lorenzo da Ponte basado en la obra de Antonio de Zamora. Se estrenó en el Teatro de Praga el 29 de octubre de 1787."
-            description2="El proyecto de la producción escenográfica para la Ópera de Colombia, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            description1="Humorous drama in two acts with music by Wolfgang Amadeus Mozart and Italian libretto by Lorenzo da Ponte based on the work of Antonio de Zamora. It premiered at the Prague Theater on October 29, 1787."
+            description2="The scenographic production project for the Opera of Colombia included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={giovanni}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
