--- a/src/pages/en/projects/scenography/hoffmann.astro
+++ b/src/pages/en/projects/scenography/hoffmann.astro
@@ -12,15 +12,15 @@ import hoffmann5 from '../../../../img/projects/hoffmann/hoffmann5.webp';
 import hoffmann6 from '../../../../img/projects/hoffmann/hoffmann6.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Ópera de Quebec, Quebec, Canadá' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Quebec Opera, Quebec, Canada' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
     { label: 'Regisseur', value: 'Alejandro Chacón' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Diseño de vestuario', value: 'Adán Martínez' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Año', value: '2005' },
+    { label: 'Set design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Adán Martínez' },
+    { label: 'Technical design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Year', value: '2005' },
 ];
 
 const asesores = ['-'];
@@ -72,10 +72,10 @@ const images = [
             id="hoffmann"
             city="Quebec, Canadá"
             year="2005"
-            room="Ópera de Quebec"
+            room="Quebec Opera"
             project="Les Contes d'Hoffmann"
-            description1="La ópera en tres actos con música de Jacques Offenbach y libreto en francés de Jules Barbier, se basa en una obra sobre los cuentos de E.T.A. Hoffmann, estrenada en 1881."
-            description2="El proyecto de la producción escenográfica para la Ópera de Quebec, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            description1="The opera in three acts with music by Jacques Offenbach and libretto in French by Jules Barbier, is based on a work about the stories of E.T.A. Hoffmann, premiered in 1881."
+            description2="The scenographic production project for the Opera of Quebec included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={hoffmann}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
