--- a/src/pages/en/projects/scenography/maschera.astro
+++ b/src/pages/en/projects/scenography/maschera.astro
@@ -26,16 +26,16 @@ import maschera19 from '../../../../img/projects/maschera/maschera19.webp';
 import maschera20 from '../../../../img/projects/maschera/maschera20.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Colón, Buenos Aires, Argentina' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Eric Vigié' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Vestuario', value: 'Imme Möller' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Visualización arquitectónica digital', value: 'Alfredo Santis' },
-    { label: 'Año', value: '2008' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Colón, Buenos Aires, Argentina' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Eric Vigié' },
+    { label: 'Scenographic design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Imme Möller' },
+    { label: 'Technical design', value: 'Arq. Alfio Sambataro' },
+    { label: 'Digital architectural visualization', value: 'Alfredo Santis' },
+    { label: 'Year', value: '2008' },
 ];
 
 const asesores = ['-'];
@@ -171,10 +171,10 @@ const images = [
             id="maschera"
             city="Santiago, Chile"
             year="2008"
-            room="Teatro municipal de Santiago"
+            room="Municipal Theater of Santiago"
             project="Un ballo in Maschera"
-            description1="Ópera en tres actos con música de Giuseppe Verdi y libreto en italiano de Antonio Somma, basado en el libreto de Eugène Scribe para la ópera Gustave III de Daniel-François Auber."
-            description2="El proyecto de la producción escenográfica para el Teatro Municipal de Santiago, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            description1="Opera in three acts with music by Giuseppe Verdi and libretto in Italian by Antonio Somma, based on the libretto by Eugène Scribe for the opera Gustave III by Daniel-François Auber."
+            description2="The scenographic production project for the Municipal Theater of Santiago included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={maschera}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
