--- a/src/pages/en/projects/scenography/ottello.astro
+++ b/src/pages/en/projects/scenography/ottello.astro
@@ -17,16 +17,16 @@ import ottello10 from '../../../../img/projects/ottello/ottello10.webp';
 import ottello11 from '../../../../img/projects/ottello/ottello11.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Ópera de Colombia, Bogotá, Colombia' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Opera of Colombia, Bogotá, Colombia' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
     { label: 'Regisseur', value: 'Rosetta Cucchi' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Diseño de vestuario', value: 'Adán Martínez' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Visualización arquitectónica digital', value: 'Alfredo Santis' },
-    { label: 'Año', value: '2005' },
+    { label: 'Scenographic design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Adán Martínez' },
+    { label: 'Technical design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Digital architectural visualization', value: 'Alfredo Santis' },
+    { label: 'Year', value: '2005' },
 ];
 
 const asesores = ['-'];
@@ -108,9 +108,9 @@ const images = [
             id="ottello"
             city="Bogotá, Colombia"
             year="2005"
-            room="Ópera de Colombia"
+            room="Opera of Colombia"
             project="Ottello"
-            description1="Con música de Guiseppe Verdi y libreto de Arrigo Boito a partir de la obra de Shakespeare estrenada en el año 1887, el proyecto de la producción escenográfica incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            description1="Opera with music by Guiseppe Verdi and libretto by Arrigo Boito based on Shakespeare's play, premiered in 1887.The scenographic production project for the Opera of Colombia included the design of engineering and set design systems; stagecraft machinery, modular systems for units of compact transport; and special effects mechanisms."
             img={ottello}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
