--- a/src/pages/en/projects/scenography/pagliacci.astro
+++ b/src/pages/en/projects/scenography/pagliacci.astro
@@ -8,16 +8,16 @@ import pagliacci1 from '../../../../img/projects/pagliacci/pagliacci1.webp';
 import pagliacci2 from '../../../../img/projects/pagliacci/pagliacci2.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Municipal de Santiago, Santiago, Chile' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Municipal de Santiago, Santiago, Chile' },
+    { label: 'Services', value: 'Scenic engineering and construction systems' },
     { label: 'Regisseur', value: 'Willy Landin' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Diseño de vestuario', value: 'Imme Möller' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Visualización arquitectónica digital', value: 'Alfredo Santis' },
-    { label: 'Año', value: '2003' },
+    { label: 'Scenic design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Imme Möller' },
+    { label: 'Technical design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Digital architectural visualization', value: 'Alfredo Santis' },
+    { label: 'Year', value: '2003' },
 ];
 
 const asesores = ['-'];
@@ -45,10 +45,10 @@ const images = [
             id="pagliacci"
             city="Santiago, Chile"
             year="2003"
-            room="Teatro Municipal de Santiago"
+            room="Municipal Theater of Santiago"
             project="Pagliacci"
-            description1="El drama en dos actos con un prólogo y con música y libreto en italiano pertenecen al compositor Ruggero Leoncavallo."
-            description2="El proyecto de la producción escenográfica para el Teatro Municipal de Santiago, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            description1="The drama in two acts with a prologue and with music and libretto in Italian belong to the composer Ruggero Leoncavallo."
+            description2="The scenographic production project for the Municipal Theater of Santiago included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={pagliacci}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
