--- a/src/pages/en/projects/scenography/soldaten.astro
+++ b/src/pages/en/projects/scenography/soldaten.astro
@@ -10,15 +10,15 @@ import soldaten3 from '../../../../img/projects/soldaten/soldaten3.webp';
 import soldaten4 from '../../../../img/projects/soldaten/soldaten4.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Colón, Buenos Aires, Argentina' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Pablo Maritano' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Diseño de vestuario', value: 'Sofía di Nunzio' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro, Arq. Agostina Sambataro' },
-    { label: 'Año', value: '2016' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Colón, Buenos Aires, Argentina' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Pablo Maritano' },
+    { label: 'Scenographic design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Sofía di Nunzio' },
+    { label: 'Technical design', value: 'Arch. Alfio Sambataro, Arch. Agostina Sambataro' },
+    { label: 'Year', value: '2016' },
 ];
 
 const asesores = ['-'];
@@ -58,10 +58,10 @@ const images = [
             id="soldaten"
             city="Buenos Aires, Argentina"
             year="2016"
-            room="Teatro Colón"
+            room="Colón Theater"
             project="Die Soldaten"
-            description1="Ópera en cuatro actos con música y libreto en alemán de Bernd Alois Zimmermann, basado en la obra homónima del año 1776 escrita por Jakob Michael Reinhold Lenz."
-            description2="El proyecto de la producción escenográfica para el Teatro Colón de Buenos Aires, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos, sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto y mecanismos de efectos especiales."
+            description1="Opera in four acts with music and libretto in German by Bernd Alois Zimmermann, based on the homonymous work of the year 1776 written by Jakob Michael Reinhold Lenz."
+            description2="The scenographic production project for the Teatro Colón included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={soldaten}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
