--- a/src/pages/en/projects/scenography/traviata.astro
+++ b/src/pages/en/projects/scenography/traviata.astro
@@ -16,16 +16,16 @@ import traviata9 from '../../../../img/projects/traviata/traviata9.webp';
 import traviata10 from '../../../../img/projects/traviata/traviata10.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Colón, Buenos Aires, Argentina' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
+    { label: 'Type', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Colón, Buenos Aires, Argentina' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
     { label: 'Regisseur', value: 'Eric Vigié' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Vestuario', value: 'Imme Möller' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Visualización arquitectónica digital', value: 'Alfredo Santis' },
-    { label: 'Año', value: '2007' },
+    { label: 'Set design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Imme Möller' },
+    { label: 'Technical design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Digital architectural visualization', value: 'Alfredo Santis' },
+    { label: 'Year', value: '2007' },
 ];
 
 const asesores = ['-'];
@@ -94,17 +94,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="La Traviata">
+<Layout description="" title="Traviata">
     <Base>
         <ProjectPage
             images={images}
             id="traviata"
             city="Buenos Aires, Argentina"
             year="2007"
-            room="Teatro Colón"
-            project="La Traviata"
-            description1="La traviata es una ópera en tres actos con música de Giuseppe Verdi y libreto en italiano de Francesco Maria Piave, basado en la novela de Alexandre Dumas.`La dame aux camélias` "
-            description2="El proyecto de la producción escenográfica para el Teatro Colón, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            room="Colón Theater"
+            project="Traviata"
+            description1="La traviata is an opera in three acts with music by Giuseppe Verdi and Italian libretto by Francesco Maria Piave, based on Alexandre Dumas's novel La dame aux camélias."
+            description2="The scenographic production project for the Municipal Theater of Santiago included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={traviata}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
