--- a/src/pages/en/projects/scenography/turandot.astro
+++ b/src/pages/en/projects/scenography/turandot.astro
@@ -11,15 +11,15 @@ import turandot4 from '../../../../img/projects/turandot/turandot4.webp';
 import turandot5 from '../../../../img/projects/turandot/turandot5.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Ópera de Colombia, Bogotá, Colombia' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Alejandro Chacón' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Diseño de vestuario', value: 'Adán Martínez' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Año', value: '2002' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Opera of Colombia, Bogotá, Colombia' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Alejandro Chacón' },
+    { label: 'Scenic design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Adán Martínez' },
+    { label: 'Technical design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Year', value: '2002' },
 ];
 
 const asesores = ['-'];
@@ -65,10 +65,10 @@ const images = [
             id="turandot"
             city="Bogotá, Colombia"
             year="2002"
-            room="Opera de Colombia"
+            room="Opera of Colombia"
             project="Turandot"
-            description1="Turandot es una ópera en tres actos con música de Giacomo Puccini y libreto en italiano de Giuseppe Adami y Renato Simoni, completada por Franco Alfano y estrenada en 1926."
-            description2="El proyecto de la producción escenográfica de la Ópera de Colombia incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            description1="Turandot is an opera in three acts with music by Giacomo Puccini and Italian libretto by Giuseppe Adami and Renato Simoni, completed by Franco Alfano and premiered in 1926."
+            description2="The scenographic production project for the Opera of Colombia included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={turandot}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
