--- a/src/pages/en/projects/scenography/vespri.astro
+++ b/src/pages/en/projects/scenography/vespri.astro
@@ -10,15 +10,15 @@ import vespri3 from '../../../../img/projects/vespri/vespri3.webp';
 import vespri4 from '../../../../img/projects/vespri/vespri4.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Colón, Buenos Aires, Argentina' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Eric Vigié' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Diseño de vestuario', value: 'Imme Möller' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Año', value: '2006' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Colón, Buenos Aires, Argentina' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Eric Vigié' },
+    { label: 'Set Design', value: 'Enrique Bordolini' },
+    { label: 'Lighting Design', value: 'Enrique Bordolini' },
+    { label: 'Costume Design', value: 'Imme Möller' },
+    { label: 'Technical Design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Year', value: '2006' },
 ];
 
 const asesores = ['-'];
@@ -58,10 +58,10 @@ const images = [
             id="vespri"
             city="Buenos Aires, Argentina"
             year="2006"
-            room="Teatro Colón"
+            room="Colón Theater"
             project="Il Vespri Siciliani"
-            description1="Ópera en cinco actos con música de Giuseppe Verdi y libreto en francés de Charles Duveyrier y Eugène Scribe a partir de su obra Le duc d'Albe, estrenada en 1855."
-            description2="El proyecto de la producción escenográfica para el Teatro Colón del año 2006, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            description1="Opera in five acts with music by Giuseppe Verdi and libretto in French by Charles Duveyrier and Eugène Scribe from his work Le duc d'Albe, premiered in 1855."
+            description2="The scenographic production project for the Teatro Colón included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={vespri}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
