--- a/src/pages/en/projects/theaters/ciudad-de-las-artes.astro
+++ b/src/pages/en/projects/theaters/ciudad-de-las-artes.astro
@@ -11,22 +11,22 @@ import ciudad4 from '../../../../img/projects/ciudad/ciudad4.webp';
 import ciudad5 from '../../../../img/projects/ciudad/ciudad5.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Centro cultural' },
-    { label: 'Ubicación', value: 'Av. del Professor López Piñero, Valencia, España' },
-    { label: 'Temática', value: 'Proyecto de obra nueva Palacio de las Artes Reina Sofia' },
+    { label: 'Typology', value: 'Cultural Center' },
+    { label: 'Location', value: 'Av. del Professor López Piñero, Valencia, Spain' },
+    { label: 'Theme', value: 'New construction project Palacio de las Artes Reina Sofia' },
     {
-        label: 'Servicios',
-        value: 'Anteproyecto licitatorio de sistema de maquinaria escénica de piso y rigging',
+        label: 'Services',
+        value: 'Bidding preliminary design of stage floor machinery and rigging systems',
     },
-    { label: 'Comitente', value: 'Hoffend & Sons, Inc. Rochester New York' },
+    { label: 'Client', value: 'Hoffend & Sons, Inc. Rochester New York' },
     {
-        label: 'Proyecto general de arquitectura',
-        value: 'Ing. Santiago Calatrava y Arq. Félix Candela',
+        label: 'General architectural project',
+        value: 'Eng. Santiago Calatrava and Arch. Félix Candela',
     },
-    { label: 'Localidades', value: '1500' },
-    { label: 'Superficie aproximada Palacio de las Artes', value: '60.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '15.000 m2' },
-    { label: 'Año', value: '2000-2001' },
+    { label: 'Seats', value: '1500' },
+    { label: 'Approximate area of Palace of Arts', value: '60,000 m²' },
+    { label: 'Approximate intervened area', value: '15,000 m²' },
+    { label: 'Year', value: '2000-2001' },
     { web: 'http://www.cac.es/es/home.html', href: 'http://www.cac.es/es/home.html' },
 ];
 
@@ -66,17 +66,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Ciudad de las Artes y las Ciencias">
+<Layout description="" title="City of Arts and Sciences">
     <Base>
         <ProjectPage
             images={images}
             id="ciudad"
-            city="Valencia, España"
+            city="Valencia, Spain"
             year="2000-2001"
-            room="Palacio de las Artes Reina Sofía"
-            project="Ciudad de las Artes y las Ciencias"
-            description1="La Ciudad de las Artes y las Ciencias, un complejo arquitectónico cultural y de entretenimiento inaugurado en el año 1998 y diseñado por el ingeniero Santiago Calatrava y el arquitecto Félix Candela, conforma una de las construcciones de arte moderno más importantes del mundo. Su teatro de la ópera de Valencia, el Palacio de las Artes Reina Sofía, fue inaugurado en 2005 y posee una capacidad para 1481 personas en su sala principal."
-            description2="El proyecto realizado incluyó la realización del anteproyecto para la oferta de licitación de maquinaria escenotécnica con sistemas de rigging y grandes plataformas escénicas. En retro escena se colocaron 2 montacargas laterales para vehículos pesados y grandes volúmenes de 17x4m y un rear wagon. También se montó una plataforma principal de 18x18m con 9 subplataformas, 8 carras laterales – 4 por hombro -  con sistema de ecualización de niveles de piso y 4 plataformas para foso de orquesta. El sistema de rigging contó con varas motorizadas automatizadas y sistemas auxiliares de montaje."
+            room="Palau de les Arts Reina Sofía"
+            project="City of Arts and Sciences"
+            description1="The City of Arts and Sciences, a cultural and entertainment architectural complex inaugurated in 1998 and designed by engineer Santiago Calatrava and architect Félix Candela, forms one of the most important modern art constructions in the world. Its Valencia opera house, the Queen Sofia Palace of Arts, was inaugurated in 2005 and has a capacity for 1481 people in its main hall."
+            description2="The completed project included the development of a preliminary design for the bidding of stage machinery with rigging systems and large scenic platforms. In the backstage, 2 lateral elevators for heavy vehicles and large volumes of 17x4m and a rear wagon were placed. A main platform of 18x18m with 9 sub-platforms, 8 lateral wagons - 4 per side - with a floor level equalization system and 4 platforms for the orchestra pit were also installed. The rigging system featured automated motorized bars and auxiliary assembly systems."
             img={ciudad}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
