--- a/src/pages/en/projects/theaters/eastman-theater.astro
+++ b/src/pages/en/projects/theaters/eastman-theater.astro
@@ -14,16 +14,16 @@ import eastman7 from '../../../../img/projects/eastman/eastman7.webp';
 import eastman8 from '../../../../img/projects/eastman/eastman8.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: '26 Gibbs St, Rochester, Nueva York, Estados Unidos de América' },
-    { label: 'Temática', value: 'Acoustic Shell System' },
-    { label: 'Servicios', value: 'Proyecto ejecutivo' },
-    { label: 'Comitente', value: 'Hoffend & Sons, Inc. Rochester New York' },
-    { label: 'Localidades', value: '2200' },
-    { label: 'Superficie aproximada total', value: '30.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '6.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 5.000.000' },
-    { label: 'Año', value: '2004' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: '26 Gibbs St, Rochester, New York, United States of America' },
+    { label: 'Theme', value: 'Acoustic Shell System' },
+    { label: 'Services', value: 'Executive project' },
+    { label: 'Client', value: 'Hoffend & Sons, Inc. Rochester New York' },
+    { label: 'Seating capacity', value: '2200' },
+    { label: 'Approximate total area', value: '30,000 m2' },
+    { label: 'Approximate intervened area', value: '6,000 m2' },
+    { label: 'Approximate intervention cost', value: 'US$ 5,000,000' },
+    { label: 'Year', value: '2004' },
     { web: 'http://eastmantheatre.org/', href: 'http://eastmantheatre.org/' },
 ];
 
@@ -86,12 +86,12 @@ const images = [
         <ProjectPage
             images={images}
             id="eastman"
-            city="Rochester, Estados Unidos"
+            city="Rochester, United States"
             year="2004"
             room="Acoustic Shell System, Kodak Hall"
             project="Eastman Theater - Rochester"
-            description1="El teatro Eastman, inaugurado en 1922 como centro de música, danza y artes visuales, con su sala principal Kodak Hall, contiene una capacidad para 2260 espectadores y es la sala de teatro principal de la Escuela de Música Eastman de la Universidad de Rochester."
-            description2="Para esta obra se realizó la ingeniería de proyecto de la cámara de concierto para acondicionamiento acústico, con un plafond de paneles de múltiple ángulo de trabajo y paredes laterales y de fondo. Controla su accionamiento electromecánico un software “Vortek” para suspensión y movimientos horizontales. El proyecto comprende toda la ingeniería constructiva estructural y del diseño decorativo y sus ornamentos."
+            description1="The Eastman Theater, opened in 1922 as a center for music, dance and visual arts, with its Kodak Hall main hall, contains a capacity for 2260 spectators and is the main theater of the Eastman School of Music at the University of Rochester."
+            description2="This project included the engineering of the acoustic shell for acoustic conditioning, with a plafond made of multiple working angle panels, side and back walls. A “Vortek” software controls its drive for suspension and horizontal movements. The project covers all the constructive and structural engineering and the decorative and ornamental design."
             img={eastman}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
