--- a/src/pages/en/projects/theaters/kimmel-center.astro
+++ b/src/pages/en/projects/theaters/kimmel-center.astro
@@ -10,17 +10,17 @@ import kimmel3 from '../../../../img/projects/kimmel/kimmel3.webp';
 import kimmel4 from '../../../../img/projects/kimmel/kimmel4.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Concert Hall' },
-    { label: 'Ubicación', value: '300 S Broad St, Filadelfia, Estados Unidos de América' },
-    { label: 'Temática', value: 'Acoustic Canopy System Verizon Hall' },
-    { label: 'Servicios', value: 'Proyecto ejecutivo' },
-    { label: 'Comitente', value: 'Hoffend & Sons, Inc. Rochester New York' },
-    { label: 'Proyecto de arquitectura general', value: 'Arq. Rafael Viñoly' },
-    { label: 'Localidades', value: '2500' },
-    { label: 'Superficie aproximada total', value: '40.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '9.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 7.000.000' },
-    { label: 'Año', value: '2002' },
+    { label: 'Typology', value: 'Concert Hall' },
+    { label: 'Location', value: '300 S Broad St, Philadelphia, United States of America' },
+    { label: 'Theme', value: 'Acoustic Canopy System Verizon Hall' },
+    { label: 'Services', value: 'Executive Project' },
+    { label: 'Client', value: 'Hoffend & Sons, Inc. Rochester New York' },
+    { label: 'General Architecture Design', value: 'Arch. Rafael Viñoly' },
+    { label: 'Seating Capacity', value: '2500' },
+    { label: 'Total Approximate Area', value: '40,000 sq m' },
+    { label: 'Approximate Area of Intervention', value: '9,000 sq m' },
+    { label: 'Approximate Project Cost', value: 'US$ 7,000,000' },
+    { label: 'Year', value: '2002' },
     { web: 'https://www.kimmelcenter.org/', href: 'https://www.kimmelcenter.org/' },
 ];
 
@@ -63,8 +63,8 @@ const images = [
             year="2002"
             room="Acoustic Canopy System, Verizon Hall"
             project="The Kimmel Center for the Performing Arts"
-            description1="El centro Kimmel para las artes escénicas, inaugurado en el año 2001 y diseñado por el arquitecto Rafael Viñoly, es el principal teatro de Filadelfia, Estados Unidos y alberga la sala Verizon como concert hall para 2547 espectadores y la sala Perelman como sala multipropósito, con capacidad para 650 espectadores."
-            description2="El proyecto abarcó la ingeniería constructiva del sistema de canopy modulado – cámara acústica- regulable para acondicionamiento escénico y acústico con accionamiento electromecánico. Construido y montado por Hoffend and Sons., fue realizado en conjunto con la asesoría de Artec Consultants y Theater Projects Consultants."
+            description1="The Kimmel Center for the Performing Arts, inaugurated in 2001 and designed by architect Rafael Viñoly, is the main theater in Philadelphia, United States and houses the Verizon Hall as a concert hall for 2547 spectators and the Perelman Hall as a multipurpose room, with capacity for 650 spectators."
+            description2="The project covers the construction engineering of the modulated adjustable canopy system for scenic and acoustic conditioning, with electromechanical drive. Built and assembled by Hoffend and Sons. It was made in conjunction with the advice of Artec Consultants and Theater Projects Consultants."
             img={kimmel}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
