--- a/src/pages/en/projects/theaters/teatro-argentino.astro
+++ b/src/pages/en/projects/theaters/teatro-argentino.astro
@@ -19,20 +19,20 @@ import argentino12 from '../../../../img/projects/argentino/argentino12.webp';
 import argentino13 from '../../../../img/projects/argentino/argentino13.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'Av. 51 502, La Plata, Buenos Aires, Argentina' },
-    { label: 'Temática', value: 'Proyecto de Equipamiento de Maquinaria Escénica' },
-    { label: 'Servicios', value: 'Proyecto licitatorio, proyecto ejecutivo, Dirección de obra' },
-    { label: 'Comitente', value: 'Gobierno de la Provincia de Buenos Aires' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: 'Av. 51 502, La Plata, Buenos Aires, Argentina' },
+    { label: 'Theme', value: 'Stage Machinery Equipment Project' },
+    { label: 'Services', value: 'Bidding project, executive project, Construction management' },
+    { label: 'Client', value: 'Government of the Province of Buenos Aires' },
     {
-        label: 'Proyecto de arquitectura general',
-        value: 'Arq. Enrique Bares, Arq. Tomás García, Arq. Roberto Germani, Arq. Ines Rubio, Arq. Alberto Sbarra y Arq. Carlos Ucar.',
+        label: 'General architectural project',
+        value: 'Arch. Enrique Bares, Arch. Tomás García, Arch. Roberto Germani, Arch. Ines Rubio, Arch. Alberto Sbarra and Arch. Carlos Ucar.',
     },
-    { label: 'Localidades', value: '2000' },
-    { label: 'Superficie aproximada total', value: '60.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '12.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 23.000.000' },
-    { label: 'Año', value: '1998-2001' },
+    { label: 'Capacity', value: '2000' },
+    { label: 'Total approximate area', value: '60,000 m2' },
+    { label: 'Approximate intervention area', value: '12,000 m2' },
+    { label: 'Approximate intervention cost', value: 'US$ 23,000,000' },
+    { label: 'Year', value: '1998-2001' },
     {
         web: 'https://www.gba.gob.ar/es/teatroargentino',
         href: 'https://www.gba.gob.ar/es/teatroargentino',
@@ -123,17 +123,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Argentino de La Plata">
+<Layout description="" title="Argentine Theatre of La Plata">
     <Base>
         <ProjectPage
             images={images}
             id="argentino"
             city="La Plata, Buenos Aires, Argentina"
             year="1998-2001"
-            room="Sala Lírica"
-            project="Teatro Argentino de La Plata"
-            description1="El nuevo Teatro Argentino de La Plata, re-inaugurado en el año 1999 tras el incendio que devastó al edificio original de 1890, fue diseñado por los arquitectos Enrique Bares, Tomás García, Roberto Germani, Ines Rubio, Alberto Sbarra y Carlos Ucar, conteniendo una de las salas líricas más destacadas de Argentina. Su sala principal “Alberto Ginastera” posee una capacidad para 2000 espectadores."
-            description2="El trabajo comprendió la realización de la ingeniería y montaje de los distintos sistemas de equipamiento escenotécnico. Estos incluyeron parrillas y puentes de maniobras, 30 varas contrapesadas, 36 varas motorizadas, 60 malacates en 12 varas puntuales, sistemas de suspensión auxiliares manuales y motorizados, módulos de iluminación y embocadura variable compuesta por torres laterales y puente de luz de boca, telón de seguridad y telón principal de apertura a la italiana. La maquinaria de piso de escenario comprende 2 plataformas principales, 12 sub-plataformas, 3 vagones laterales por hombro, compensadores de nivelación de piso y 2 montacargas. Un sistema de control general computarizado regula todos los elementos."
+            room="Opera Hall"
+            project="Argentine Theatre of La Plata"
+            description1="The new Teatro Argentino de La Plata, re-inaugurated in the year 1999 after the fire that devastated the original building of 1890, was designed by the architects Enrique Bares, Tomás García, Roberto Germani, Ines Rubio, Alberto Sbarra and Carlos Ucar, containing one of the most distinguished opera houses in Argentina. Its main house “Alberto Ginastera” has a capacity for 2000 spectators."
+            description2="The work covered the realization of the engineering and assembly of the different rigging systems. These included grids and fly galleries, 30 counterweight battens, 36 motorized battens, 60 hoists in 12 points, auxiliary manual and motorized rigging systems, lighting modules and adjustable proscenium consisting of 2 lateral proscenium towers and a proscenium bridge, safety curtain and main tableau curtain. The stage floor machinery is constituted by 2 main platforms, 12 sub-platforms, 3 lateral wagons per wing, floor level compensators and 2 service lifts. A general computerized control system regulates all the elements."
             img={argentino}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
