--- a/src/pages/en/projects/theaters/teatro-bellas-artes.astro
+++ b/src/pages/en/projects/theaters/teatro-bellas-artes.astro
@@ -23,16 +23,16 @@ import artes16 from '../../../../img/projects/artes/artes16.webp';
 import artes17 from '../../../../img/projects/artes/artes17.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'Ak 68, Bogotá, Colombia' },
-    { label: 'Temática', value: 'Proyecto de Obra nueva' },
-    { label: 'Servicios', value: 'Proyecto ejecutivo escenotécnico' },
-    { label: 'Comitente', value: 'Cafam' },
-    { label: 'Localidades', value: '1000' },
-    { label: 'Superficie aproximada total', value: '15.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '9.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 3.500.000' },
-    { label: 'Año', value: '2006-2007' },
+    { label: 'Type', value: 'Theater' },
+    { label: 'Location', value: 'Ak 68, Bogotá, Colombia' },
+    { label: 'Project Type', value: 'New Construction Project' },
+    { label: 'Services', value: 'Executive stage technology project' },
+    { label: 'Client', value: 'Cafam' },
+    { label: 'Seating Capacity', value: '1000' },
+    { label: 'Total Approximate Area', value: '15,000 m²' },
+    { label: 'Approximate Intervention Area', value: '9,000 m²' },
+    { label: 'Approximate Investment', value: 'US$ 3,500,000' },
+    { label: 'Year', value: '2006-2007' },
     {
         web: 'https://www.cafam.com.co/cultura/',
         href: 'https://www.cafam.com.co/cultura/',
@@ -147,7 +147,7 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Bellas Artes">
+<Layout description="" title="The Fine Arts Theater of Bogota">
     <Base>
         <ProjectPage
             images={images}
@@ -155,9 +155,9 @@ const images = [
             city="Bogotá, Colombia"
             year="2006-2007"
             room="Sala de Teatro"
-            project="Teatro Bellas Artes"
-            description1="El Teatro Bellas Artes de Bogotá, Colombia realizado por la caja de compensación familiar Cafam e inaugurado en el año 2008, cuenta con capacidad para 1200 localidades al aire libre y 1000 dentro del recinto. El encargo incluyó la realización del proyecto ejecutivo de maquinaria escenotécnica, sistemas de iluminación, audio y video. Se instaló un sistema de parrillas y puentes con tableros de piso modulados desmontables. "
-            description2="A su vez contó con telón de seguridad, telón principal con apertura americana, sistema de varas motorizadas automatizadas, sistema de iluminación escénica y plataformas de foso de orquesta. Se realizó la adaptación de la estructura existente que originalmente había sido diseñada como sala de conciertos, para convertirla en una sala de teatro polifuncional."
+            project="The Fine Arts Theater of Bogota"
+            description1="The Fine Arts Theater of Bogota, Colombia, realized by the Cafam family compensation fund and inaugurated in the year 2008, counts with a capacity for 1200 outdoor and 1000 indoor seats. The commission covered the realization of the technical design project for stage machinery, lighting systems, sound and video. "
+            description2="A system of grid and fly galleries with modulated removable floorboards was installed. Additionally, the project included a safety curtain, main draw curtain, motorized batten system, stage lighting system and orchestra pit platforms. The existing structure, originally design for a concert hall, was adapted to convert it into a multipurpose theater house."
             img={artes}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
