--- a/src/pages/en/projects/theaters/teatro-coliseo.astro
+++ b/src/pages/en/projects/theaters/teatro-coliseo.astro
@@ -45,29 +45,29 @@ import coliseo38 from '../../../../img/projects/coliseo/coliseo38.webp';
 import coliseo39 from '../../../../img/projects/coliseo/coliseo39.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
+    { label: 'Typology', value: 'Theater' },
     {
-        label: 'Ubicación',
-        value: 'Marcelo T. de Alvear 1125, Ciudad Autónoma de Buenos Aires, Argentina',
+        label: 'Location',
+        value: 'Marcelo T. de Alvear 1125, Autonomous City of Buenos Aires, Argentina',
     },
     {
-        label: 'Temática',
-        value: 'Proyecto de Remodelación, Modernización y Equipamiento Escenotécnico',
+        label: 'Subject',
+        value: 'Remodeling, Modernization and Stage Technical Equipment Project',
     },
-    { label: 'Servicios', value: 'Proyecto ejecutivo y Supervisión de obra' },
-    { label: 'Comitente', value: 'Fundación Cultural Coliseum' },
-    { label: 'Directora ejecutiva', value: 'Elisabetta Riva' },
-    { label: 'Proyecto general escenotécnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Proyecto general de arquitectura teatral', value: 'Arq. Agostina Sambataro' },
-    { label: 'Dirección de obra', value: 'Arq. Sergio Ronzoni' },
-    { label: 'Asesores', value: 'Jose Luis Fioruccio, Sandro Massironi, Ing. Juan Antonio Vargas' },
-    { label: 'Colaboradores', value: 'Arq. María Paz Carvajal, Arq. María Virginia Castro' },
-    { label: 'Visualización arquitectónica digital', value: 'Light-Syndrome' },
-    { label: 'Localidades', value: '1700' },
-    { label: 'Superficie aproximada total', value: '10.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '9.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 4.500.000' },
-    { label: 'Año', value: '2013-2017' },
+    { label: 'Services', value: 'Executive project and Construction supervision' },
+    { label: 'Client', value: 'Coliseum Cultural Foundation' },
+    { label: 'Executive director', value: 'Elisabetta Riva' },
+    { label: 'General stage technical project', value: 'Arch. Alfio Sambataro' },
+    { label: 'General theater architecture project', value: 'Arch. Agostina Sambataro' },
+    { label: 'Construction management', value: 'Arch. Sergio Ronzoni' },
+    { label: 'Consultants', value: 'Jose Luis Fioruccio, Sandro Massironi, Eng. Juan Antonio Vargas' },
+    { label: 'Collaborators', value: 'Arch. María Paz Carvajal, Arch. María Virginia Castro' },
+    { label: 'Digital architectural visualization', value: 'Light-Syndrome' },
+    { label: 'Capacity', value: '1700' },
+    { label: 'Total approximate area', value: '10,000 m2' },
+    { label: 'Approximate intervention area', value: '9,000 m2' },
+    { label: 'Approximate intervention cost', value: 'US$ 4,500,000' },
+    { label: 'Year', value: '2013-2017' },
     { web: 'http://www.teatrocoliseo.org.ar/', href: 'http://www.teatrocoliseo.org.ar/' },
 ];
 
@@ -311,18 +311,18 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Coliseo">
+<Layout description="" title="The Coliseo Theater of Buenos Aires">
     <Base>
         <ProjectPage
             images={images}
             id="coliseo"
             city="Buenos Aires, Argentina"
             year="2013-2017"
-            room="Sala de Teatro"
-            project="Teatro Coliseo"
-            description1="El Teatro Coliseo de Buenos Aires es un teatro tradicional con capacidad para 1700 personas, propiedad del Consulado de Italia. Su historia data de fines del siglo XIX, momento a partir del cual tuvo una serie de modificaciones en su fachada y estructura interior, conformando en 1961 la actual impronta, obra del arquitecto Mario Bigongiari. El proyecto de puesta en valor, remodelación, equipamiento y modernización de las instalaciones edilicias que se inició en el año 2013, comenzó a partir de un profundo estudio de relevamiento y diagnóstico que permitió diseñar un proyecto integral abarcando no sólo su caja escénica, sino toda la infraestructura edilicia, tanto en sus aspectos de funcionalidad técnica como estéticos."
-            description2="La renovación fue diseñada y planificada de manera que pueda ser ejecutado en distintas etapas durante los períodos de receso para no interrumpir la actividad del teatro. Dentro de este marco, respetando tanto la arquitectura original como su ambientación, se concretó la reparación completa de los 1250 m2 de fachada y se realizó el interiorismo de la sala de teatro, recomponiendo también sectores que habían sido intervenidos en los últimos años y no favorecían a la funcionalidad de la misma. Todo aquello con sus respectivos proyectos de iluminación, instalación termomecánica y eléctrica totalmente nuevos.La caja escénica se remodeló y modernizó integralmente. Se construyó un nuevo sistema de parrillas y puentes de maniobras que implicaron una estructura metálica de 75.000 kg . El nuevo equipamiento incluyó 30 varas motorizadas automatizadas y sistemas de rieles puntuales motorizados, según normativas internacionales de seguridad.  También un nuevo sistema de accionamiento del telón cortafuego automatizado y nuevo piso de escenario, para el cual se adoptó un criterio de máxima flexibilidad de transformación geométrica que lo convierte en un sistema polifuncional único en Argentina. Se diseñó y fabricó en el país una cámara de concierto modular desarmable que permitió mejorar notablemente la acústica de la sala. El avance en materia de tecnología permitió al teatro recibir producciones internacionales de espectáculos y proveer mayor grado de seguridad tanto para el personal técnico como para artistas."
-            description3="Las áreas de apoyo técnico y artístico fueron proyectadas para devolverle el potencial operativo a la funcionalidad de la planta, creando espacios eficientes y compactos y optimizando cada ambiente y espacios comunes. Dentro del área artística, se realizaron 2 niveles de camarines (con servicio de audio-video escénico y llamado a escena), 2 salas de ensayo y un green room o hall de artistas. Dentro del área de apoyo técnico se remodelaron depósitos, sala de dimmers y sala de control auxiliar, incluyendo la construcción de una bodega especialmente diseñada para el piano."
+            room="Theater"
+            project="The Coliseo Theater of Buenos Aires"
+            description1="The Coliseo Theater of Buenos Aires is a traditional theater with capacity for 1700 people, property of the Italian Consulate. Its history dates from the late nineteenth century, when it had a series of changes in its facade and interior structure, forming in 1961 the current imprint, work of the architect Mario Bigongiari.The project of restoration, remodeling, equipment and modernization of the building facilities that began in 2013, started from a deep study of diagnosis that allowed the design of an integral project covering not only its stage house, but all the building infrastructure, both in its aspects of technical functionality and aesthetics.The renovation was designed and planned so that it could be executed in different stages during recess periods as not to interrupt the theater activity. Within this framework, conserving both the original architecture and its setting, the complete repair of the 1250 m2 of façade was completed and the interior of the theater house was re-designed, also recomposing sectors that had been intervened in recent years and did not encourage the functionality of it. In addition, the respective lighting projects, thermomechanical and electric installation totally new were carried out."
+            description2="The stage house was completely remodeled and modernized. A new system of grid and fly galleries was built, involving a metal structure of 75,000 kg. The new equipment included 30 automated motorized battens and motorized point rail systems, according to international safety regulations. A new system for activating the automated safety curtain and a new stage floor were built. For the stage floor a criterion of maximum flexibility of geometric transformation was adopted, which makes it a unique polyfunctional system in Argentina. A demountable modular acoustic shell was designed and manufactured in the country, which allowed to improve the acoustics of the house. The advance in technology allowed the theater to receive international productions of shows and provide a greater degree of security for both the technical staff and artists."
+            description3="The areas of technical and artistic support were designed to return the operational potential to the functionality of the plan, creating efficient and compact spaces and optimizing each environment and common space. Within the artistic area, 2 levels of dressing rooms (with ring intercom), 2 rehearsal rooms and a green room, were remodeled. Within the technical support area, warehouses, a dimmer's room and an auxiliary control room were remodeled, including the construction of a warehouse specially designed for the piano."
             img={coliseo}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
