--- a/src/pages/en/projects/theaters/teatro-colon.astro
+++ b/src/pages/en/projects/theaters/teatro-colon.astro
@@ -12,19 +12,19 @@ import colon5 from '../../../../img/projects/colon/colon5.webp';
 import colon6 from '../../../../img/projects/colon/colon6.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'Cerrito 628, Ciudad Autónoma de Buenos Aires, Argentina' },
-    { label: 'Temática', value: 'Remodelación, Modernización y Equipamiento Escénico' },
-    { label: 'Servicios', value: 'Proyecto licitatorio, proyecto ejecutivo, dirección de obra' },
-    { label: 'Comitente', value: 'Municipalidad de la Ciudad de Buenos Aires' },
-    { label: 'Dirección Ejecutiva', value: 'Enrique Bordolini' },
-    { label: 'Proyecto escenotécnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Dirección de obra', value: 'Alfio Sambataro' },
-    { label: 'Localidades', value: '2500' },
-    { label: 'Superficie aproximada total', value: '58.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '7.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 14.000.000' },
-    { label: 'Año', value: '1987-1990' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: 'Cerrito 628, Autonomous City of Buenos Aires, Argentina' },
+    { label: 'Theme', value: 'Remodeling, Modernization and Scenic Equipment' },
+    { label: 'Services', value: 'Bidding project, executive project, construction management' },
+    { label: 'Client', value: 'Municipality of the City of Buenos Aires' },
+    { label: 'Executive Direction', value: 'Enrique Bordolini' },
+    { label: 'Scenic-technical Project', value: 'Arch. Alfio Sambataro' },
+    { label: 'Construction Management', value: 'Alfio Sambataro' },
+    { label: 'Capacity', value: '2500' },
+    { label: 'Total Approximate Area', value: '58,000 m2' },
+    { label: 'Approximate Intervention Area', value: '7,000 m2' },
+    { label: 'Approximate Intervention Amount', value: 'US$ 14,000,000' },
+    { label: 'Year', value: '1987-1990' },
     { web: 'http://www.teatrocolon.org.ar/', href: 'http://www.teatrocolon.org.ar/' },
 ];
 
@@ -76,18 +76,18 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Colón">
+<Layout description="" title="Colon Theater">
     <Base>
         <ProjectPage
             images={images}
             id="colon"
             city="Buenos Aires, Argentina"
             year="1987-1990"
-            room="Sala Lírica"
-            project="Teatro Colón"
-            description1="El Teatro Colón de Buenos Aires, inaugurado en el año 1908 y diseñado por los arquitectos Francesco Tamburini, Vittorio Meano y Jules Dormal, posee una capacidad para 2487 espectadores sentados y es considerado tanto por su acústica como por su arquitectura, uno de los teatros más importantes del mundo."
-            description2="El proyecto escenotécnico para un edificio de estas características, requirió un profundo análisis de diagnóstico, concluyendo que su caja escénica, como corazón de todo teatro, se encontraba obsoleta, operando con sistemas de suspensión del siglo pasado; lo que impedía al teatro estar a la altura de la demanda cultural del momento."
-            description3="En este contexto, el proyecto abarcó la remodelación completa de la caja escénica incluyendo el refuerzo y adecuación de la estructura resistente de rigging del centenario edificio. Involucró el diseño de doble parrilla y 3 niveles de puentes de maniobras y técnicos. Los sistemas de suspensión comprendieron un total de 30 varas manuales contrapesadas, 36 varas motorizadas, 60 malacates de 12 líneas de 5 puntuales, 2 puentes de iluminación y sistema de embocadura variable compuesto de torres laterales y puente portal. Se instalaron en total 100 motores controlados por un sistema central computarizado. También se incluyeron nuevos sistemas de intercomunicación técnica, llamadores a escena, audio y video."
+            room="Opera Hall"
+            project="Colon Theater"
+            description1="The Teatro Colón of Buenos Aires, inaugurated in 1908 and designed by architects Francesco Tamburini, Vittorio Meano and Jules Dormal, has a capacity for 2487 seated spectators and is considered as much for its acoustics as for its architecture, one of the most important theaters in the world. Its stage is 35 meters wide and 34 meters long with a free height of 48 meters."
+            description2="The staging project for a building of these characteristics, required a deep diagnosis analysis, concluding that its stage house - as the heart of every theater - was obsolete, operating with rigging systems of the past century; which prevented the theater to cope with the cultural demand at the moment."
+            description3="In this context, the project included the complete remodeling of the stage house, including the reinforcement and adaptation of the rigging structure. It involved the design of a double grid and three levels of fly galleries. The flying system covered a total of 30 counterweight battens, 36 motorized battens, 60 hoists of 12 lines of 5 points, 2 lighting bridges and an adjustable proscenium of 2 lateral proscenium towers and a proscenium bridge. A total of 100 hoists were installed, controlled by a central computerized system. New intercom systems, stage callers, sound and video were included."
             img={colon}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
