--- a/src/pages/en/projects/theaters/teatro-condes.astro
+++ b/src/pages/en/projects/theaters/teatro-condes.astro
@@ -20,19 +20,19 @@ import condes13 from '../../../../img/projects/condes/condes13.webp';
 import condes14 from '../../../../img/projects/condes/condes14.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'Av. Apoquindo 3384, Las Condes, Santiago, Chile' },
-    { label: 'Temática', value: 'Proyecto de obra nueva' },
-    { label: 'Servicios', value: 'Proyecto licitatorio de escenotecnia' },
-    { label: 'Comitente', value: 'Taller 2 - Arq. Juan Ramón López Cauly' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: 'Av. Apoquindo 3384, Las Condes, Santiago, Chile' },
+    { label: 'Theme', value: 'New construction project' },
+    { label: 'Services', value: 'Scenotechnics bidding project' },
+    { label: 'Client', value: 'Taller 2 - Arch. Juan Ramón López Cauly' },
     {
-        label: 'Proyecto de arquitectura general',
-        value: 'Arq. Eduardo San Martín y Arq. Pedro Gastón Pascal',
+        label: 'General architecture project',
+        value: 'Arch. Eduardo San Martín and Arch. Pedro Gastón Pascal',
     },
-    { label: 'Localidades', value: '900' },
-    { label: 'Superficie aproximada total', value: '22.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '9.000 m2' },
-    { label: 'Año', value: '2005-2006' },
+    { label: 'Seats', value: '900' },
+    { label: 'Total approximate area', value: '22,000 m2' },
+    { label: 'Approximate intervened area', value: '9,000 m2' },
+    { label: 'Year', value: '2005-2006' },
     {
         web: 'http://www.tmlascondes.cl/',
         href: 'http://www.tmlascondes.cl/',
@@ -129,17 +129,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Municipal de Las Condes">
+<Layout description="" title="Theater of Las Condes">
     <Base>
         <ProjectPage
             images={images}
             id="condes"
             city="Santiago, Chile"
             year="2005-2006"
-            room="Sala Lírica"
-            project="Teatro Municipal de Las Condes"
-            description1="Inaugurado en el año 2010, El Teatro Municipal de Las Condes, diseñado por los arquitectos Eduardo San Martín y Pedro Gastón Pascal, y que sustituyó al pequeño Teatro Apoquindo; posee una capacidad total de 874 localidades. El área dedicada al teatro se ubica en los cinco niveles del subsuelo y fue dotada con tecnología para satisfacer tanto las necesidades de los espectadores como del montaje de los espectáculos y representaciones."
-            description2="Se realizó también el diseño a nivel proyecto y especificaciones técnicas para licitación de maquinaria escenotécnica, sistemas de iluminación, audio y video. A su vez, se estudiaron específicamente las interrelaciones espaciales de áreas técnicas y sala como colaboradores para el estudio del arquitecto Juan Ramón López Cauly."
+            room="Theater"
+            project="Theater of Las Condes"
+            description1="Inaugurated in the year 2010, the Municipal Theater of Las Condes, designed by architects Eduardo San Martín and Pedro Gastón Pascal, and that replaced the small Apoquindo Theater; has a total capacity of 874 seats. The area dedicated to the theater is in the five levels underground and was and was equipped with technology to satisfy both the needs of the spectators and the assembly of the shows and performances."
+            description2="The technical design and specifications for bidding for stage machinery, lighting systems, audio and video were also carried out. At the same time, the spatial interrelationships of technical areas and main house were studied, as collaborators for the architect Juan Ramón López Cauly."
             img={condes}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
