--- a/src/pages/en/projects/theaters/teatro-del-lago.astro
+++ b/src/pages/en/projects/theaters/teatro-del-lago.astro
@@ -26,23 +26,23 @@ import lago19 from '../../../../img/projects/lago/lago19.webp';
 import lago20 from '../../../../img/projects/lago/lago20.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'Av. Philippi 1000, Frutillar, Chile' },
-    { label: 'Temática', value: 'Proyecto de obra nueva adaptada sobre bases existentes' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: 'Av. Philippi 1000, Frutillar, Chile' },
+    { label: 'Theme', value: 'New construction project adapted on existing foundations' },
     {
-        label: 'Servicios',
-        value: 'Proyecto ejecutivo escenotécnico y de cámara acústica, Inspección de obra',
+        label: 'Services',
+        value: 'Executive scenotechnical and acoustic chamber project, Construction supervision',
     },
-    { label: 'Comitente', value: 'Inmobiliaria Frutillar S.A.' },
+    { label: 'Client', value: 'Inmobiliaria Frutillar S.A.' },
     {
-        label: 'Proyecto de arquitectura general',
-        value: 'Arq. Gerardo Köster, Arq. Gustavo Greene, Arq. Bernd Haller, Arq. Cristián Valdés, Arq. Pablo Cordua y Arq. Andrés Alvear',
+        label: 'General architectural project',
+        value: 'Arch. Gerardo Köster, Arch. Gustavo Greene, Arch. Bernd Haller, Arch. Cristián Valdés, Arch. Pablo Cordua and Arch. Andrés Alvear',
     },
-    { label: 'Proyecto escenotécnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Localidades', value: '1200' },
-    { label: 'Superficie aproximada total', value: '10.000 m2' },
-    { label: 'Monto aproximado total', value: 'US$ 10.000.000' },
-    { label: 'Año', value: '2009-2010' },
+    { label: 'Scenotechnical project', value: 'Arch. Alfio Sambataro' },
+    { label: 'Capacity', value: '1200' },
+    { label: 'Total approximate area', value: '10,000 m2' },
+    { label: 'Total approximate cost', value: 'US$ 10,000,000' },
+    { label: 'Year', value: '2009-2010' },
     { web: 'http://www.teatrodellago.cl/', href: 'http://www.teatrodellago.cl/' },
 ];
 
@@ -172,17 +172,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro del Lago">
+<Layout description="" title="The Teatro del Lago in Frutillar">
     <Base>
         <ProjectPage
             images={images}
             id="lago"
             city="Frutillar, Chile"
             year="2009-2010"
-            room="Espacio Tronador, Sala Nestlé"
-            project="Teatro del Lago"
-            description1="El Teatro del Lago de Frutillar, Chile, inaugurado en el año 2010 y diseñado inicialmente por los arquitectos Gerardo Köster, Gustavo Greene en una primera etapa, estaba concebido para realizar conciertos. Posteriormente, en una segunda etapa realizada por los arquitectos Bernd Haller, Cristián Valdés, Pablo Cordua y Andrés Alvear, se adaptó el diseño para funcionar como un teatro capaz de albergar la más variada clase de espectáculos. Se destaca por ser el teatro internacional más austral del mundo con una de las mejores acústicas del país. Su sala principal, “Espacio Tronador Sala Nestlé”, posee una capacidad para 1178 espectadores y un foso para 100 músicos. El teatro posee además un anfiteatro con un aforo de 270 personas y 4 salas multipropósito."
-            description2="Dentro de este contexto, se realizó el proyecto ejecutivo completo de rigging y equipamiento escenotécnico general para la sala principal. Se instalaron varas motorizadas automatizadas bajo norma DIN 56950 con estándar de seguridad SIL 3, sistemas de suspensión manuales auxiliares y contrapesados, monorriel con motores puntuales, y parrillas y puentes de maniobras con piso modulado desmontable. El foso de orquesta posee dos plataformas automatizadas impulsadas por actuadores eléctricos helicoidales. También se realizó el diseño de la Cámara Acústica de concierto bajo normas de BBM Müller Alemania, junto con la Inspección de obra."
+            room="Theater"
+            project="The Teatro del Lago in Frutillar"
+            description1="The Teatro del Lago in Frutillar, Chile, inaugurated in 2010 and initially designed by the architects Gerardo Köster, Gustavo Greene in a first stage; and by the architects Bernd Haller, Cristián Valdés, Pablo Cordua and Andrés Alvear, in a second stage, stands out for being the southernmost international theater in the world with one of the best acoustics in the country. Its main house, “Espacio Tronador Sala Nestlé”, has a capacity of 1178 seats and a pit for 100 musicians. The theater also has an amphitheater with a capacity of 270 people and 4 multipurpose rooms."
+            description2="Within this context, the complete technical design project for rigging and stage equipment in the main house was realized. Motorized automated battens under the regulation DIN 56950 with security standard SIL 3, counterweight rigging systems, monorail with point hoists and grid and fly galleries with modulated removable floorboards. The orchestra pit has two automated platforms driven by helical electric actuators. Additionally, the design of the acoustic concert shell was carried out under regulations of BBM Müller Germany, along with its construction inspection."
             img={lago}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
