--- a/src/pages/en/projects/theaters/teatro-del-libertador.astro
+++ b/src/pages/en/projects/theaters/teatro-del-libertador.astro
@@ -19,17 +19,17 @@ import libertador12 from '../../../../img/projects/libertador/libertador12.webp'
 import libertador13 from '../../../../img/projects/libertador/libertador13.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'Av. Velez Sarsfield 365, Córdoba, Argentina' },
-    { label: 'Temática', value: 'Proyecto de refuncionalización, modernización y equipamiento' },
-    { label: 'Servicios', value: 'Proyecto licitatorio de escenotecnia' },
-    { label: 'Comitente', value: 'Secretaría de Arquitectura, Agencia Córdoba Cultura S.E.' },
-    { label: 'Proyecto general de arquitectura', value: 'Arq. Gabriela Casasnovas' },
-    { label: 'Asesores', value: 'Enrique Bordolini, Ing. Juan Antonio Vargas' },
-    { label: 'Localidades', value: '1000' },
-    { label: 'Superficie aproximada total', value: '12.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '4.000 m2' },
-    { label: 'Año', value: '2017-2018' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: 'Av. Velez Sarsfield 365, Córdoba, Argentina' },
+    { label: 'Theme', value: 'Refunctionalization, modernization and equipment project' },
+    { label: 'Services', value: 'Scenotechnics bidding project' },
+    { label: 'Client', value: 'Secretary of Architecture, Córdoba Culture Agency S.E.' },
+    { label: 'General architectural project', value: 'Arch. Gabriela Casasnovas' },
+    { label: 'Consultants', value: 'Enrique Bordolini, Eng. Juan Antonio Vargas' },
+    { label: 'Seating capacity', value: '1000' },
+    { label: 'Approximate total area', value: '12,000 m2' },
+    { label: 'Approximate intervened area', value: '4,000 m2' },
+    { label: 'Year', value: '2017-2018' },
 ];
 
 const asesores = ['-'];
@@ -116,18 +116,18 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro del Libertador General San Martín">
+<Layout description="" title="The Libertador General San Martín Theater">
     <Base>
         <ProjectPage
             images={images}
             id="libertador"
             city="Córdoba, Argentina"
             year="2017-2018"
-            room="Sala Lírica"
-            project="Teatro del Libertador General San Martín"
-            description1="El Teatro Rivera Indarte, actualmente conocido como Teatro Libertador General San Martín, es el principal teatro de la ciudad argentina de Córdoba y se destaca como sala de conciertos, ópera y ballet, siendo a su vez Monumento Histórico Nacional. Su diseño fue concebido por el arquitecto Francesco Tamburini en el año 1891 con una sala principal de 1000 localidades. El Teatro posee también la sala Luis Tejeda con capacidad para 100 personas y un museo. Para el proyecto de refuncionalización, modernización y equipamiento, se trabajó en conjunto con los especialistas de restauración y el departamento de Monumentos Nacionales, generando una solución especial para cumplir con los objetivos principales de la intervención: lograr equipar al escenario con una maquinaria escénica capaz de responder a los requerimientos de las producciones actuales y conservando la antigua parrilla de 1900."
-            description2="Se proyectó con sistemas de suspensión motorizados automatizados según normativa internacional (DIN 56960 – SIL3) para otorgarle la capacidad operativa y de seguridad acorde con el uso teatral. Además de las 30 varas motorizadas y el nuevo sistema manual auxiliar, se diseñaron monorrieles motorizados. El foso de orquesta se proyectó con plataformas automatizadas. Se diseñó un nuevo sistema de iluminación escénica con sus correspondientes cabinas de control principal y auxiliares de audio, video e iluminación. El proyecto contempla un sistema de telón principal automatizado con apertura a la italiana, americana y guillotina."
-            description3="La remodelación incluye dentro de la arquitectura teatral la redistribución del área de apoyo técnica y artística. Se diferencian dos sectores independientes para cada uso. El área técnica cuenta con oficinas, depósitos de luminotecnia, bodegas estáticas y dinámicas y utilería.  El área artística cuenta con 5 camarines para primeras figuras (incluyendo uno exclusivo para el director), 6 camarines grupales, 2 salas de sastrería, 1 sala de maquillaje y archivo de partituras. Cada uno posee audio-video y llamado a escena. Se genera para los artistas un espacio tipo green room con acceso compartido desde los camarines de la sala Tejeda."
+            room="Theater"
+            project="The Libertador General San Martín Theater"
+            description1="The Rivera Indarte Theater, actually known as the Libertador General San Martín Theater, is the main opera house of the argentine city of Córdoba and stands out as a concert hall, opera and ballet house, being at the same time a National Historical Monument. Its design was conceived by the architect Francesco Tamburini in the year 1891 with a main house of 1000 locations. The theater also houses the Luis Tejeda room with capacity for 100 people and a museum.For the refurbishment, modernization and equipment project, we worked together with the restoration specialists and the National Monuments Department, generating a special solution to meet the main objectives of the intervention: to equip the stage with machinery capable of responding to the requirements of current productions and preserving the old 1900 grid."
+            description2="It was designed with automated motorized rigging systems according to international standards (DIN 56960 - SIL3) to grant it safety and operational capacity in accordance with theater use. In addition to the 30 motorized battens and the new auxiliary manual system, motorized monorails were designed. The orchestra pit was planned with automated platforms. A new stage lighting system was designed with its corresponding main control and auxiliary audio, video and lighting rooms. The project contemplates a system of automated main tableau, draw and guillotine curtain."
+            description3="The remodeling includes within the theater architecture the redistribution of the area of ​​technical and artistic support. There were two independent sectors planned for each use. The technical area has offices, lighting deposits, static and dynamic warehouses and props. The artistic area has 5 dressing rooms for first figures (including one exclusively for the director), 6 group dressing rooms, 2 tailoring rooms, 1 makeup room and a music archive. Each one has audio-video and a scene call. A green room with shared access from the dressing rooms of the Tejeda house was generated for the artists."
             img={libertador}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
