--- a/src/pages/en/projects/theaters/teatro-la-serena.astro
+++ b/src/pages/en/projects/theaters/teatro-la-serena.astro
@@ -13,19 +13,19 @@ import serena6 from '../../../../img/projects/serena/serena6.webp';
 import serena7 from '../../../../img/projects/serena/serena7.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'La Serena, Chile' },
-    { label: 'Temática', value: 'Proyecto de obra nueva' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: 'La Serena, Chile' },
+    { label: 'Theme', value: 'New construction project' },
     {
-        label: 'Servicios',
-        value: 'Asesoría Escenotécnica para la Inspección Fiscal de Diseño del Ministerio de Obras Públicas',
+        label: 'Services',
+        value: 'Theatrical Technical Consulting for the Fiscal Design Inspection of the Ministry of Public Works',
     },
-    { label: 'Comitente', value: 'MOP, Dirección de Arquitectura Región de Coquimbo' },
-    { label: 'Proyecto de arquitectura general', value: 'Holmes Labbe Portugueis Spichiger' },
-    { label: 'Localidades', value: '1500 + 800' },
-    { label: 'Superficie aproximada total', value: '20.000 m2' },
-    { label: 'Monto aproximado total', value: 'US$ 18.000.000' },
-    { label: 'Año', value: '2011-2012' },
+    { label: 'Client', value: 'MOP, Architecture Department Coquimbo Region' },
+    { label: 'General architectural project', value: 'Holmes Labbe Portugueis Spichiger' },
+    { label: 'Seats', value: '1500 + 800' },
+    { label: 'Total approximate area', value: '20.000 m2' },
+    { label: 'Total approximate cost', value: 'US$ 18.000.000' },
+    { label: 'Year', value: '2011-2012' },
 ];
 
 const asesores = ['-'];
@@ -76,17 +76,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Municipal la Serena">
+<Layout description="" title="La Serena Theater">
     <Base>
         <ProjectPage
             images={images}
             id="serena"
             city="La serena, Chile"
             year="2011-2012"
-            room="Sala Principal y Secundaria"
-            project="Teatro Municipal la Serena"
-            description1="Con una sala principal para 1500 localidades y una sala secundaria para 800 personas, el Teatro Regional de la Serena, producto del concurso realizado por el Consejo de la Cultura, el Ministerio de Obras Públicas y el municipio de La Serena en el año 2011, fue diseñado por el estudio Holmes Labbe Portugueis Spichiger. "
-            description2="Dentro del asesoramiento escenotécnico, se realizó la inspección de diseño de arquitectura teatral del proyecto integral para licitación. Sus cajas escénicas se proyectaron de manera tal que sean totalmente automatizadas, con equipamiento de suspensión de decorados e iluminación y plataformas controlados por software computarizado."
+            room="Main and secondary theater"
+            project="La Serena Theater"
+            description1="With a main theater of 1500 seats and a secondary theater with capacity for 800 people, the Regional Theater of La Serena, product of the competition held by the Council of Culture, the Ministry of Public Works and the Municipality of La Serena in 2011, was designed by the studio Holmes Labbe Portugueis Spichiger."
+            description2="Within the theater consultancy, the inspection of the theater architecture design of the integral bidding project was carried out. Its stage houses were designed to be fully automated, with rigging equipment for sets and lighting and platforms controlled by computerized software."
             img={serena}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
