--- a/src/pages/en/projects/theaters/teatro-martin-fierro.astro
+++ b/src/pages/en/projects/theaters/teatro-martin-fierro.astro
@@ -16,27 +16,27 @@ import fierro9 from '../../../../img/projects/fierro/fierro9.webp';
 import fierro10 from '../../../../img/projects/fierro/fierro10.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
+    { label: 'Typology', value: 'Theater' },
     {
-        label: 'Ubicación',
-        value: 'Calle Nicolás Cúccolo y Calle Juan Prossi S/N, Paseo del Bosque, La Plata, Buenos Aires, Argentina',
+        label: 'Location',
+        value: 'Nicolás Cúccolo Street and Juan Prossi Street S/N, Paseo del Bosque, La Plata, Buenos Aires, Argentina',
     },
-    { label: 'Temática', value: 'Proyecto de Restauración del Teatro al aire libre' },
-    { label: 'Servicios', value: 'Proyecto licitatorio de escenotecnia' },
-    { label: 'Comitente', value: 'Gobierno de la Provincia de Buenos Aires' },
+    { label: 'Theme', value: 'Open-air Theater Restoration Project' },
+    { label: 'Services', value: 'Scenotechnical bidding project' },
+    { label: 'Client', value: 'Government of the Province of Buenos Aires' },
     {
-        label: 'Proyecto general de arquitectura',
-        value: 'Ministerio de Infraestructura, Secretaría de Cultura',
+        label: 'General architectural project',
+        value: 'Ministry of Infrastructure, Secretary of Culture',
     },
     {
-        label: 'Asesores',
-        value: 'Enrique Bordolini, Ing. Juan Antonio Vargas, Arq. Andrés Cumsille',
+        label: 'Consultants',
+        value: 'Enrique Bordolini, Eng. Juan Antonio Vargas, Arch. Andrés Cumsille',
     },
-    { label: 'Colaboradores', value: 'Arq. María Virginia Castro' },
-    { label: 'Localidades', value: '2600' },
-    { label: 'Superficie aproximada total', value: '10.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '9.000 m2' },
-    { label: 'Año', value: '2016' },
+    { label: 'Collaborators', value: 'Arch. María Virginia Castro' },
+    { label: 'Capacity', value: '2600' },
+    { label: 'Total approximate area', value: '10,000 m2' },
+    { label: 'Approximate intervened area', value: '9,000 m2' },
+    { label: 'Year', value: '2016' },
 ];
 
 const asesores = ['-'];
@@ -105,18 +105,18 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Martin Fierro">
+<Layout description="" title="The Martín Fierro Theater">
     <Base>
         <ProjectPage
             images={images}
             id="fierro"
             city="La Plata, Argentina"
             year="2016"
-            room="Sala al aire libre"
-            project="Teatro Martin Fierro"
-            description1="El Teatro Martín Fierro, comúnmente conocido como “Teatro del Lago” y ubicado en la isla del “Paseo del Lago”, es un espacio al aire libre cuya historia data de principios del siglo XX, período tras el cual se construyó el actual teatro en el año 1949, con capacidad para 2600 espectadores en su platea.En el año 2016 se decidió comenzar un proyecto de modernización y restauración del antiguo teatro. Tras el estudio de diagnóstico, se concluyó que el teatro presentaba un mal estado de conservación, con una serie de modificaciones en su arquitectura que restaba funcionalidad."
-            description2="El proyecto escenotécnico y de arquitectura teatral tuvo entonces como idea rectora la puesta en valor del Teatro, considerando los lineamientos de restauración y refuncionalización. Esto se logró conjugando las necesidades técnicas propias de la especialidad escenotécnica junto con los criterios de intervención de la especialidad de restauración edilicia."
-            description3="La remodelación abarca la caja escénica y dependencias técnicas y artísticas -incluyendo dos pisos de camarines y oficinas- y una nueva sala experimental, devolviendo la funcionalidad al teatro y generando espacios más confortables. Para la caja escénica se incluyó un sistema de parrilla completamente nuevo con equipamiento de maquinaria escenotecnica motorizado; sistemas de iluminación escénica y de plataformas móviles para escenario y foso de orquesta."
+            room="Open-air room"
+            project="The Martín Fierro Theater"
+            description1="The Martín Fierro Theater, commonly known as Teatro del Lago and located on the island of Paseo del Lago, is an outdoor space whose history dates back to the beginning of the 20th century, after which the current theater was built in the year 1949, with a capacity for 2600 spectators. In 2016 it was decided to start a modernization and restoration project of the old theater. After the diagnostic study, it was concluded that the theater presented a poor state of conservation, with a series of modifications in its architecture that reduced functionality."
+            description2="​The theater architecture project then had as a guiding idea the enhancement of the Theater, considering the restoration and refunctionalization guidelines. This was achieved by combining the technical needs of the sceno-technical specialty with the intervention criteria of the specialty of building restoration."
+            description3="The remodeling includes the stage house and technical and artistic dependencies -including two floors of dressing rooms and offices- and a new experimental room, restoring functionality to the theater and generating more comfortable spaces. For the stage house, a completely new rigging system with motorized stage equipment and lighting systems and mobile platforms for stage and orchestra pit were included."
             img={fierro}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
