--- a/src/pages/en/projects/theaters/teatro-pane.astro
+++ b/src/pages/en/projects/theaters/teatro-pane.astro
@@ -26,23 +26,23 @@ import pane19 from '../../../../img/projects/pane/pane19.webp';
 import pane20 from '../../../../img/projects/pane/pane20.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'Pdte. Franco, Asunción, Paraguay' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: 'Pdte. Franco, Asunción, Paraguay' },
     {
-        label: 'Temática',
-        value: 'Proyecto de Remodelación Edilicia y equipamiento de maquinaria escénica',
+        label: 'Scope',
+        value: 'Building Remodeling Project and stage machinery equipment',
     },
-    { label: 'Servicios', value: 'Proyecto licitatorio, ejecutivo e ingeniería de fabricación' },
-    { label: 'Comitente', value: 'Municipalidad de la Ciudad de Asunción' },
+    { label: 'Services', value: 'Bidding project, executive and manufacturing engineering' },
+    { label: 'Client', value: 'Municipality of the City of Asunción' },
     {
-        label: 'Proyecto de arquitectura general',
-        value: 'Arq. Pablo Capelletti, Arq. Javier Corvalán y Arq. Pedro Espínola Vargas Peña',
+        label: 'General architectural project',
+        value: 'Arch. Pablo Capelletti, Arch. Javier Corvalán and Arch. Pedro Espínola Vargas Peña',
     },
-    { label: 'Localidades', value: '700' },
-    { label: 'Superficie aproximada total', value: '20.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '8.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 1.500.000' },
-    { label: 'Año', value: '2005-2006' },
+    { label: 'Capacity', value: '700' },
+    { label: 'Total approximate area', value: '20,000 m2' },
+    { label: 'Approximate intervened area', value: '8,000 m2' },
+    { label: 'Approximate intervention cost', value: 'US$ 1,500,000' },
+    { label: 'Year', value: '2005-2006' },
     {
         web: 'http://www.teatromunicipal.com.py/',
         href: 'http://www.teatromunicipal.com.py/',
@@ -175,17 +175,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Municipal Ignacio A. Pane">
+<Layout description="" title="The Teatro Municipal Ignacio A. Pane">
     <Base>
         <ProjectPage
             images={images}
             id="pane"
             city="Asunción, Paraguay"
             year="2005-2006"
-            room="Sala Lírica"
-            project="Teatro Municipal Ignacio A. Pane"
-            description1="El Teatro Municipal Ignacio A. Pane de Paraguay, restaurado en 2005 siguiendo los criterios del edificio original de 1894, fue diseñado por los arquitectos Pablo Capelletti, Javier Corvalán y Pedro Espínola Vargas Peña y posee una sala principal con capacidad para 700 espectadores. Su escenario contiene una embocadura de 14 m de ancho por 9 m de alto y una superficie de 225 m², con una altura total de 22m."
-            description2="En este contexto, se realizó un estudio técnico de diagnóstico del edificio para luego desarrollar el proyecto licitatorio y ejecutivo de arquitectura teatral y escenotecnia. Este comprendió parrillas y puentes de maniobras con piso modulado desmontables, sistemas de suspensión motorizados para decorados e iluminación, telón principal con apertura americana, embocadura variable, sistemas de montaje auxiliar, audio y video."
+            room="Theater"
+            project="The Teatro Municipal Ignacio A. Pane"
+            description1="The Teatro Municipal Ignacio A. Pane of Paraguay, restored in 2005 following the original building criteria of 1894, was designed by architects Pablo Capelletti, Javier Corvalán and Pedro Espínola Vargas Peña and has a main house with capacity for 700 people. Its stage has a 14 meters width by 9 meters tall proscenium opening and an area of 225m2, with a height of 22 meters."
+            description2="In this context, a technical diagnosis analysis of the building was made to develop the bidding and technical design project of theater architecture and equipment. This included grids and fly galleries with modulated removable floors, motorized flying system for sceneries and lighting, main draw curtain, adjustable proscenium, auxiliary assembly systems, sound and video."
             img={pane}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
