--- a/src/pages/en/projects/theaters/teatro-santiago.astro
+++ b/src/pages/en/projects/theaters/teatro-santiago.astro
@@ -19,20 +19,20 @@ import santiago12 from '../../../../img/projects/santiago/santiago12.webp';
 import santiago13 from '../../../../img/projects/santiago/santiago13.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'Agustinas 794, Santiago, Chile' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: 'Agustinas 794, Santiago, Chile' },
     {
-        label: 'Temática',
-        value: 'Proyecto de remodelación de áreas de apoyo y Correctivo de Maquinaria Escenotécnica',
+        label: 'Scope',
+        value: 'Renovation project for support areas and Stage Machinery Corrective Maintenance',
     },
-    { label: 'Servicios', value: 'Proyecto ejecutivo, Dirección e Inspección de calidad' },
-    { label: 'Comitente', value: 'Teatro Municipal de Santiago' },
-    { label: 'Proyecto de arquitectura general', value: 'Arq. Alfio Sambataro' },
-    { label: 'Localidades', value: '1500' },
-    { label: 'Superficie aproximada total', value: '25.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '5.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 3.000.000' },
-    { label: 'Año', value: '2002-2014' },
+    { label: 'Services', value: 'Executive project, Direction and Quality Inspection' },
+    { label: 'Client', value: 'Santiago Municipal Theater' },
+    { label: 'General architectural project', value: 'Arch. Alfio Sambataro' },
+    { label: 'Seating capacity', value: '1500' },
+    { label: 'Total approximate area', value: '25,000 m2' },
+    { label: 'Approximate intervened area', value: '5,000 m2' },
+    { label: 'Approximate intervention cost', value: 'US$ 3,000,000' },
+    { label: 'Year', value: '2002-2014' },
     {
         web: 'http://www.municipal.cl/',
         href: 'http://www.municipal.cl/',
@@ -123,17 +123,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Municipal de Santiago">
+<Layout description="" title="Municipal Theater of Santiago">
     <Base>
         <ProjectPage
             images={images}
             id="santiago"
             city="Santiago, Chile"
             year="2002-2014"
-            room="Sala Lírica"
-            project="Teatro Municipal de Santiago"
-            description1="El Teatro Municipal de Santiago, inaugurado originalmente en el año 1857 y diseñado por el arquitecto François Brunet de Baines y el ingeniero Felipe Augusto Charme de l´Isle, es la Ópera Nacional de Chile y principal escenario para la música clásica del país. Su sala principal posee una capacidad para 1500 espectadores."
-            description2="Dentro de la asesoría escenotécnica del teatro, se comenzó por realizar una inspección e informe técnico de diagnóstico de los sistemas de maquinaria escénica existentes y un estudio de factibilidad. Se desarrolló luego el proyecto de mantenimiento, correctivo, preventivo y de modernización del equipamiento. Las tareas realizadas incluyeron el proyecto, control de calidad de fabricación e inspección de obra de la maquinaria escénica y sistemas escenotécnicos del escenario. También se ejecutó la remodelación completa de los tres niveles de camarines."
+            room="Opera House"
+            project="Municipal Theater of Santiago"
+            description1="The Teatro Municipal de Santiago, inaugurated originally in the year 1857 and designed by architect François Brunet de Baines and engineer Felipe Augusto Charme de l´Isle, is the national opera of Chile and main stage for classical music of the country. Its main house has a capacity for 1500 people."
+            description2="Within the theater consultancy, the first step was to inspect and elaborate a technical report of diagnosis of the existing stage machinery systems and a feasibility study. The maintenance, corrective and preventive project was developed afterwards together with the modernization of the theater equipment. The realized work included the project, fabrication quality control, construction inspection of the stage machinery and rigging systems. In addition, the three levels of theater dressing rooms were remodeled."
             img={santiago}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
