--- a/src/pages/en/projects/theaters/teatro-solis.astro
+++ b/src/pages/en/projects/theaters/teatro-solis.astro
@@ -18,19 +18,19 @@ import solis11 from '../../../../img/projects/solis/solis11.webp';
 import solis12 from '../../../../img/projects/solis/solis12.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
-    { label: 'Ubicación', value: 'Reconquista s/n esq. Bartolomé Mitre, Montevideo, Uruguay' },
+    { label: 'Typology', value: 'Theater' },
+    { label: 'Location', value: 'Reconquista s/n corner Bartolomé Mitre, Montevideo, Uruguay' },
     {
-        label: 'Temática',
-        value: 'Proyecto de remodelación y modernización de maquinaria escenotécnica',
+        label: 'Theme',
+        value: 'Remodeling and modernization project of stage machinery',
     },
-    { label: 'Servicios', value: 'Proyecto licitatorio de escenotecnia' },
-    { label: 'Comitente', value: 'Hoffend & Sons, Inc.' },
-    { label: 'Localidades', value: '1.200' },
-    { label: 'Superficie aproximada total', value: '20.000 m2' },
-    { label: 'Superficie aproximada intervenida', value: '7.000 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 3.000.000' },
-    { label: 'Año', value: '2003' },
+    { label: 'Services', value: 'Stage technology bidding project' },
+    { label: 'Client', value: 'Hoffend & Sons, Inc.' },
+    { label: 'Seating capacity', value: '1,200' },
+    { label: 'Approximate total area', value: '20,000 sq m' },
+    { label: 'Approximate intervention area', value: '7,000 sq m' },
+    { label: 'Approximate intervention cost', value: 'US$ 3,000,000' },
+    { label: 'Year', value: '2003' },
     {
         web: 'http://www.teatrosolis.org.uy/index_1.html',
         href: 'http://www.teatrosolis.org.uy/index_1.html',
@@ -115,17 +115,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Municipal Solís">
+<Layout description="" title="The Solis Theater">
     <Base>
         <ProjectPage
             images={images}
             id="solis"
             city="Montevideo, Uruguay"
             year="2003"
-            room="Sala Lírica"
-            project="Teatro Municipal Solís"
-            description1="El Teatro Municipal Solís de Montevideo, Uruguay fue por primera vez inaugurado en el año 1856. En el año 2004 fue reinaugurado tras su reforma principal en la cual la mejora más importante fue la ocurrida en su escenario, aumentándose en un 80% su superficie y un 100% en volumen. Este cambio fue fundamental para poder recibir espectáculos locales e internacionales de gran infraestructura."
-            description2="Se logró a partir de la realización del proyecto de equipamiento de la caja escénica con las correspondientes soluciones para maquinaria escenotécnica, sistemas de suspensión y sistemas de iluminación y auxiliares. Todo se concretó utilizando las estructuras metálicas de parrillas y puentes de maniobras existentes en el proyecto original."
+            room="Opera House"
+            project="The Solis Theater"
+            description1="The Teatro Municipal Solís of Montevideo, Uruguay, was inaugurated for the first time in the year 1856. In 2004 it was re-inaugurated, after its main reform in which the most important improvement was in the stage, increasing 80% of its area and 100% of its volume. This change was fundamental to enable the theater to receive both local and international shows and productions of great infrastructure."
+            description2=" It came true from the realization of the theater equipment and architecture project with its respective solutions for stage machinery, rigging, lighting and auxiliary systems. It all was accomplished using the pre-existent metallic structures of grids and fly galleries of the original building."
             img={solis}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
