--- a/src/pages/en/projects/theaters/teatro-tronador.astro
+++ b/src/pages/en/projects/theaters/teatro-tronador.astro
@@ -29,26 +29,26 @@ import tronador22 from '../../../../img/projects/tronador/tronador22.webp';
 import tronador23 from '../../../../img/projects/tronador/tronador23.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Teatro' },
+    { label: 'Typology', value: 'Theater' },
     {
-        label: 'Ubicación',
+        label: 'Location',
         value: 'Santiago del Estero 1746, Mar del Plata, Buenos Aires, Argentina',
     },
-    { label: 'Temática', value: 'Proyecto de Remodelación Teatro Tronador' },
-    { label: 'Servicios', value: 'Proyecto ejecutivo de escenotecnia' },
-    { label: 'Comitente', value: 'Marcelo González' },
+    { label: 'Theme', value: 'Tronador Theater Renovation Project' },
+    { label: 'Services', value: 'Executive project of scenotechnics' },
+    { label: 'Client', value: 'Marcelo González' },
     {
-        label: 'Proyecto general de arquitectura',
-        value: 'Arq. Mariano Englebienne, Arq. Leonardo Boccardo',
+        label: 'General architectural project',
+        value: 'Arch. Mariano Englebienne, Arch. Leonardo Boccardo',
     },
-    { label: 'Proyecto general escenotécnico', value: 'Enrique Bordolini, Arq. Alfio Sambataro' },
-    { label: 'Proyecto general de arquitectura teatral', value: 'Arq. Agostina Sambataro' },
-    { label: 'Asesor acústico', value: 'Ing. Jorge Sommerhoff' },
-    { label: 'Colaboradores', value: 'Justo Álvarez, Arq. María Virginia Castro' },
-    { label: 'Visualización arquitectónica digital', value: 'Light-syndrome' },
-    { label: 'Localidades', value: '800' },
-    { label: 'Superficie aproximada intervenida', value: '4.000 m2' },
-    { label: 'Año', value: '2017-2018' },
+    { label: 'General scenotechnical project', value: 'Enrique Bordolini, Arch. Alfio Sambataro' },
+    { label: 'General theater architecture project', value: 'Arch. Agostina Sambataro' },
+    { label: 'Acoustic consultant', value: 'Eng. Jorge Sommerhoff' },
+    { label: 'Collaborators', value: 'Justo Álvarez, Arch. María Virginia Castro' },
+    { label: 'Digital architectural visualization', value: 'Light-syndrome' },
+    { label: 'Seating capacity', value: '800' },
+    { label: 'Approximate intervened area', value: '4,000 m2' },
+    { label: 'Year', value: '2017-2018' },
     { web: 'http://www.teatrotronador.com.ar/', href: 'http://www.teatrotronador.com.ar/' },
 ];
 
@@ -196,18 +196,18 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Teatro Tronador">
+<Layout description="" title="The Tronador Theater">
     <Base>
         <ProjectPage
             images={images}
             id="tronador"
             city="Mar del Plata, Buenos Aires"
             year="2017-2018"
-            room="Sala de Teatro"
-            project="Teatro Tronador"
-            description1="El tradicional teatro de Mar del Plata se remodeló completamente, reconvirtiéndose en una nueva sala de espectáculos con capacidad para 800 personas. El complejo incluyó una escuela de ballet, sede del Instituto Superior de Arte del Teatro Colón.El proyecto escenotécnico abarcó en el área del teatro, el diseño de una renovada caja escénica y equipamiento conteniendo una nueva estructura metálica de 40 toneladas de parrilla y puentes de maniobras. Se incorporaron sistemas de suspensión para decorados y varas de iluminación, motorizados, automatizados, según normativa internacional para uso teatral. Se renovó totalmente el sistema de iluminación escénica que comprende las posiciones de escenario, sala, cabina de control y plataformas de seguidores. El nuevo piso de escenario modulado y completamente desmontable permite realizar múltiples configuraciones facilitando mutaciones a la vista. Adicionalmente contiene un sistema de piso de rebote desmontable con tecnología internacional de primer nivel."
-            description2="Se diseñó un patio de platea y bandeja de palcos con estudio de isóptica para darle una buena visual a cada espectador. El diseño acústico de la sala se realizó por geometría y materialidad. Todas las áreas de apoyo público y artístico, como así también la escuela de ballet, recibieron el tratamiento necesario para lograr los estándares de mitigación de ruido necesarios."
-            description3="El proyecto contempló un sector de apoyo técnico y artístico con camarines individuales, grupales, y para primeras figuras, así como también talleres de vestuario y maquillaje. Dentro del proyecto de arquitectura teatral se ejecutó el programa integral de la escuela de ballet con los correspondientes salones de danza y áreas de apoyo tales como camarines de maestros, kinesiología, sala audiovisual y área administrativa."
+            room="Theater"
+            project="The Tronador Theater"
+            description1="This traditional theater in Mar del Plata was completely remodeled, turning into a new auditorium with a capacity for 900 people. The complex included a ballet school, venue of the Higher Institute of Art of the Teatro Colón.The theater consultancy project included in the theater area, the design of a renovated stage house and equipment containing a new metal structure of 40 tons of grid and fly galleries. Rigging systems and battens for lighting and sets, motorized, automated, were incorporated according to international standards for theatrical use.The scene lighting system comprising the stage, hall, control cabin and follow spot platforms was completely renovated. The new stage floor modulated and completely removable allows multiple configurations facilitating in sight mutations. Additionally, it contains a removable sprung floor system with international technology."
+            description2="Stalls and box galleries with isoptic study were designed to give a good visual to each spectator. The acoustic design of the house was made by geometry and materiality. All areas of public and artistic support, as well as the ballet school, received treatment to achieve the necessary noise mitigation standards."
+            description3="The project included technical and artistic support sectors with individual and group dressing rooms, and for V.I.P. artists, as well as costume and makeup workshops. Within the theater architecture project, the integral program of the ballet school was executed with the corresponding dance halls and support areas such as teachers' dressing rooms, audiovisual room and administrative area."
             img={tronador}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
