--- a/src/pages/projects/scenography/barbero.astro
+++ b/src/pages/projects/scenography/barbero.astro
@@ -101,7 +101,7 @@ const images = [
 ];
 ---
 
-<Layout description="" title="barbero">
+<Layout description="" title="Barbero de Sevilla">
     <Base>
         <ProjectPage
             images={images}
