--- a/src/pages/en/projects/air/domingo.astro
+++ b/src/pages/en/projects/air/domingo.astro
@@ -10,14 +10,14 @@ import domingo3 from '../../../../img/projects/domingo/domingo3.webp';
 import domingo4 from '../../../../img/projects/domingo/domingo4.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenarios y Producciones al Aire libre' },
-    { label: 'Ubicación', value: 'Movistar Arena, Santiago, Chile' },
-    { label: 'Producción general', value: 'Teatro Municipal de Santiago' },
-    { label: 'Artistas', value: 'Plácido Domingo' },
-    { label: 'Servicios', value: 'Proyecto ejecutivo y Dirección técnica de producción' },
-    { label: 'Comitente', value: 'Teatro Municipal de Santiago' },
-    { label: 'Proyecto general de arquitectura', value: 'Enrique Bordolini, Arq. Alfio Sambataro' },
-    { label: 'Año', value: '2012' },
+    { label: 'Typology', value: 'Outdoor Stages and Productions' },
+    { label: 'Location', value: 'Movistar Arena, Santiago, Chile' },
+    { label: 'General Production', value: 'Municipal Theater of Santiago' },
+    { label: 'Artists', value: 'Plácido Domingo' },
+    { label: 'Services', value: 'Executive Project and Technical Production Direction' },
+    { label: 'Client', value: 'Municipal Theater of Santiago' },
+    { label: 'General Architectural Project', value: 'Enrique Bordolini, Arch. Alfio Sambataro' },
+    { label: 'Year', value: '2012' },
 ];
 
 const asesores = ['-'];
@@ -57,10 +57,10 @@ const images = [
             id="domingo"
             city="Santiago, Chile"
             year="2012"
-            room="Concierto en Movistar Arena"
+            room="Concert at Movistar Arena"
             project="Plácido Domingo"
-            description1="El reconocido tenor, director de orquesta, compositor y productor español de más de 50 años de trayectoria brindó un concierto en Movistar Arena de Santiago de Chile frente a más de 12.000 personas en un espectáctulo a beneficio."
-            description2="En el proyecto de la producción al aire libre se realizaron el diseño y la dirección técnica de la producción, tanto de los sistemas constructivos escénicos como de los sistemas de iluminación, sonido y video."
+            description1="The renowned Spanish tenor, conductor, composer and producer with more than 50 years of career performed a concert at Movistar Arena in Santiago, Chile, in front of more than 12,000 people in a benefit show."
+            description2="In the outdoor production project, the design and technical direction of the production were carried out, including the scenic construction systems as well as the lighting, sound, and video systems."
             img={domingo}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
