--- a/src/pages/en/projects/centers/cultural-casas.astro
+++ b/src/pages/en/projects/centers/cultural-casas.astro
@@ -26,21 +26,21 @@ import cultural19 from '../../../../img/projects/cultural/cultural19.webp';
 import cultural20 from '../../../../img/projects/cultural/cultural20.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Centro Cultural' },
-    { label: 'Ubicación', value: 'Av. Kennedy 9350, Santiago, Chile' },
-    { label: 'Temática', value: 'Proyecto de obra nueva' },
+    { label: 'Typology', value: 'Cultural Center' },
+    { label: 'Location', value: 'Av. Kennedy 9350, Santiago, Chile' },
+    { label: 'Theme', value: 'New construction project' },
     {
-        label: 'Servicios',
-        value: 'Proyecto licitatorio de escenotecnia para sala de espectáculos y exposiciones',
+        label: 'Services',
+        value: 'Bidding project for stage technology for performance and exhibition halls',
     },
-    { label: 'Comitente', value: 'Corporación Cultural Vitacura' },
-    { label: 'Proyecto de arquitectura general', value: 'Arq. Gonzalo Mardones' },
-    { label: 'Asesores', value: 'Ing. Juan Antonio Vargas' },
-    { label: 'Colaboradores', value: 'Arq. María Paz Carvajal' },
-    { label: 'Localidades', value: '700' },
-    { label: 'Superficie aproximada de intervención', value: '7.200 m2' },
-    { label: 'Monto aproximado de intervención', value: 'US$ 6.000.000' },
-    { label: 'Año', value: '2013-2014' },
+    { label: 'Client', value: 'Corporación Cultural Vitacura' },
+    { label: 'General architectural project', value: 'Arch. Gonzalo Mardones' },
+    { label: 'Advisors', value: 'Eng. Juan Antonio Vargas' },
+    { label: 'Collaborators', value: 'Arch. María Paz Carvajal' },
+    { label: 'Capacity', value: '700' },
+    { label: 'Approximate intervention area', value: '7,200 m2' },
+    { label: 'Approximate intervention cost', value: 'US$ 6,000,000' },
+    { label: 'Year', value: '2013-2014' },
     {
         web: 'http://www.corporacionculturalvitacura.cl/programas/casas-de-lo-matta/',
         href: 'http://www.corporacionculturalvitacura.cl/programas/casas-de-lo-matta/',
@@ -173,17 +173,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="Centro cultural casas de lo Matta">
+<Layout description="" title="Casas de Lo Matta Cultural Center">
     <Base>
         <ProjectPage
             images={images}
             id="cultural"
             city="Santiago, Chile"
             year="2013-2014"
-            room="Sala de teatro"
-            project="Centro cultural casas de lo Matta"
-            description1="El actual Centro Cultural Casas de Lo Matta contiene un Monumento Histórico Nacional que data de la época colonial cuando se erigió por primera vez como vivienda. La casa fue restaurada en 1988 por el arquitecto Patricio Gross y nuevamente en 2010 donde se reinauguró el actual centro cultural. En el año 2013 se decidió realizar un edificio anexo conteniendo diversas actividades como salas de exposición, audiovisuales y una sala de espectáculos con 700 localidades para presentaciones de teatro, conciertos y ballet."
-            description2="La asesoría escenotécnica consistió en la realización de arquitectura teatral del proyecto integral. Se proyectaron para la caja escénica de sala una parrilla y 2 niveles de puentes con estructuras metálicas totalmente moduladas. Incluyó sistemas de suspensión motorizados automatizados según normativa internacional (DIN 56950 – SIL3) para otorgarle la capacidad operativa y de seguridad acorde con el uso teatral. Además de las 25 varas motorizadas, se diseñaron monorrieles motorizados. El piso de escenario modulado y con tableros de madera desmontables, permite lograr aberturas de distintas dimensiones que sirven para apariciones de personajes como para instalación de pequeñas plataformas elevadoras. El foso de orquesta se proyectó con plataforma automatizada. Se diseñó un nuevo sistema de iluminación escénica con su correspondiente cabina de control principal de audio, video e iluminación. El proyecto contempla un sistema de telón cortafuego y telón principal automatizado con apertura a la americana, así como también un piso especial para danza."
+            room="Theater"
+            project="Casas de Lo Matta Cultural Center"
+            description1="The current Casas de Lo Matta Cultural Center contains a National Historic Monument that dates back to the colonial time when it was first erected as a residence. The house was restored in 1988 by architect Patricio Gross and again in 2010 where the current cultural center was reopened. In 2013 it was decided to build an annex building containing various activities such as exhibition halls, audiovisuals and a house with 700 locations for theater, concert and ballet performances."
+            description2="The theater consultancy consisted in the realization of theater architecture of the integral project. A grid and 2 levels of fly galleries with fully modulated metal structures were designed for the stage house. It included automated motorized rigging systems according to international standards (DIN 56950 - SIL3) to grant it safety and operational capacity in accordance with theater use. In addition to the 25 motorized battens, motorized monorails were designed. Modulated stage floor with removable wooden boards, allows to achieve openings of different dimensions that serve for appearances of characters as for installation of small lifts. The orchestra pit was designed with an automated platform. A new stage lighting system was designed with its corresponding audio, video and lighting main control room. The project includes a safety curtain system and automated main draw curtain, as well as a special dance floor."
             img={cultural}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
