--- a/src/pages/en/projects/scenography/boheme.astro
+++ b/src/pages/en/projects/scenography/boheme.astro
@@ -24,15 +24,15 @@ import boheme17 from '../../../../img/projects/boheme/boheme17.webp';
 import boheme18 from '../../../../img/projects/boheme/boheme18.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Colón Buenos Aires, Argentina' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Grischa Asagaroff' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Vestuario', value: 'Imme Möller' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Año', value: '1999' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Colón Buenos Aires, Argentina' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Grischa Asagaroff' },
+    { label: 'Set Design', value: 'Enrique Bordolini' },
+    { label: 'Lighting Design', value: 'Enrique Bordolini' },
+    { label: 'Costume Design', value: 'Imme Möller' },
+    { label: 'Technical Design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Year', value: '1999' },
 ];
 
 const asesores = ['-'];
@@ -149,17 +149,17 @@ const images = [
 ];
 ---
 
-<Layout description="" title="La Bohème de Puccini">
+<Layout description="" title="Puccini's La Bohème">
     <Base>
         <ProjectPage
             images={images}
             id="boheme"
             city="Buenos Aires, Argentina"
             year="1999"
-            room=""
-            project="La Bohème de Puccini"
-            description1="Ópera en cuatro actos​ con música de Giacomo Puccini y libreto en italiano de Giuseppe Giacosa y Luigi Illica, quienes simplificaron los diferentes episodios de la novela “Escenas de la vida bohemia” de Henri Murger,​ publicada en el periódico El Corsario a lo largo de cinco años (1845-49). La obra fue estrenada por primera vez en el Teatro Regio de Turín el 1 de febrero de 1896, dirigida por Arturo Toscanini."
-            description2="El proyecto de la producción escenográfica para el Teatro Colón, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            room="Theater"
+            project="Puccini's La Bohème"
+            description1="Opera in four acts with music by Giacomo Puccini and Italian libretto by Giuseppe Giacosa and Luigi Illica, who simplified the different episodes of the novel Scènes de la vie de bohèm by Henri Murger. The work was premiered for the first time at the Teatro Regio in Turin on February 1, 1896, directed by Arturo Toscanini."
+            description2="The scenographic production project for the Teatro Colón included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={boheme}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
