--- a/src/pages/en/projects/scenography/ernani.astro
+++ b/src/pages/en/projects/scenography/ernani.astro
@@ -13,15 +13,15 @@ import ernani6 from '../../../../img/projects/ernani/ernani6.webp';
 import ernani7 from '../../../../img/projects/ernani/ernani7.webp';
 
 const datosTecnicos = [
-    { label: 'Tipología', value: 'Escenografías' },
-    { label: 'Ubicación', value: 'Teatro Colón Buenos Aires, Argentina' },
-    { label: 'Servicios', value: 'Ingeniería y sistemas constructivos escenográficos' },
-    { label: 'Regisseur', value: 'Alejandro Chacón' },
-    { label: 'Diseño escenográfico', value: 'Enrique Bordolini' },
-    { label: 'Diseño de iluminación', value: 'Enrique Bordolini' },
-    { label: 'Vestuario', value: 'Imme Möller' },
-    { label: 'Diseño técnico', value: 'Arq. Alfio Sambataro' },
-    { label: 'Año', value: '2001' },
+    { label: 'Typology', value: 'Scenography' },
+    { label: 'Location', value: 'Teatro Colón Buenos Aires, Argentina' },
+    { label: 'Services', value: 'Engineering and scenographic construction systems' },
+    { label: 'Director', value: 'Alejandro Chacón' },
+    { label: 'Scenic design', value: 'Enrique Bordolini' },
+    { label: 'Lighting design', value: 'Enrique Bordolini' },
+    { label: 'Costume design', value: 'Imme Möller' },
+    { label: 'Technical design', value: 'Arch. Alfio Sambataro' },
+    { label: 'Year', value: '2001' },
 ];
 
 const asesores = ['-'];
@@ -79,10 +79,10 @@ const images = [
             id="ernani"
             city="Santiago, Chile"
             year="2001"
-            room="Teatro municipal"
+            room="Municipal Theater"
             project="Ernani"
-            description1="Ópera en cuatro actos con música de Giuseppe Verdi y libreto de Francesco María Piave, sobre el drama Hernani de Victor Hugo. Fue estrenada en el Teatro la Fenice, de Venecia, el 9 de marzo de 1844."
-            description2="El proyecto de la producción escenográfica para el Teatro Municipal de Santiago, incluyó el diseño de la ingeniería y sistemas constructivos escenográficos; sistemas de maquinaria de tramoya, sistemas modulares para unidades de transporte compacto; y mecanismos de efectos especiales."
+            description1="Opera in four acts with music by Giuseppe Verdi and libretto by Francesco María Piave, about the drama Hernani by Victor Hugo. It was premiered at the Teatro la Fenice, Venice, on March 9, 1844."
+            description2="The scenographic production project for the Municipal Theater of Santiago included the design of engineering and set design systems, stagecraft machinery, modular systems for units of compact transport, and special effects mechanisms."
             img={ernani}
             datosTecnicos={datosTecnicos}
             asesores={asesores}
